Last bit of `曹爽` in `《三国志》`

--- a/body.Rmd
+++ b/body.Rmd
@@ -68,13 +68,13 @@ knitr::include_graphics("images/city_henan_nanyang.png")
 
 八年夏四月，夫人张氏薨。曹爽用何晏、邓扬、丁谧之谋，迁太后于永宁宫，专擅朝政，兄弟并典 `r n("主持；主管")` 禁兵，多树亲党，屡改制度。帝不能禁，于是与爽有隙。五月，帝称疾不与政事。时人为之谣曰：“何、邓、丁，乱京城。” 
 
-##### 正始九年（248年）
+##### 正始九年（248年） {#晋书-司马懿-正始九年}
 
 九年春三月，黄门张当私出掖庭 `r n("亦作“掖廷”。宫中旁舍，妃嫔居住的地方")` 才人 `r n("宫中女官的名称，汉代始设置")` 石英等十一人，与曹爽为伎人 `r n("指女歌舞艺人")` `r co("《三国志》言或私取或矫诏赐才人以为伎乐，荒淫无度，犹胜此处，不知真假。[《三国志·曹爽·初》](#三国志-曹爽-初)")` 。爽、晏谓帝疾笃，遂 `r n("于是，就")` 有无君之心，与当密谋，图危社稷，期有日矣。帝亦潜为之备，爽之徒属亦颇疑帝。会河南尹李胜将莅荆州，来候 `r n("迎候拜见")` 帝。帝诈疾笃，使两婢侍，持衣衣落，指口言渴，婢进粥，帝不持杯饮，粥皆流出霑胸。胜曰：“众情 `r n("众人的情绪")` 谓明公旧风发动，何意尊体 `r n("不料、岂料")` 乃尔！”帝使声气才属 `r n("形容声气微弱乏力")` ，说“年老枕疾，死在旦夕。君当屈 `r n("治理，收治")` 并州，并州近胡，善为之备。恐不复相见，以子师、昭兄弟为托。”胜曰：“当还忝 `r n("辱，有愧于，常用作谦辞")` 本州，非并州。”帝乃错乱其辞曰：“君方到并州。”胜复曰：“当忝荆州。”帝曰：“年老意荒，不解君言。今还为本州，盛德壮烈，好建功勋！”胜退告爽曰：“司马公尸居余气，形神已离，不足虑矣。”他日，又言曰：“太傅不可复济，令人怆然。”故爽等不复设备。 
 
 ##### 嘉平元年 {#晋书-宣帝-嘉平元年}
 
-嘉平 `r n("249年四月-254年十月，是三国时期曹魏的君主魏齐王曹芳的第二个年号，共计6年。这也是曹魏政权的第六个年号。")` 元年春正月甲午，天子谒高平陵，爽兄弟皆从。是日，太白袭月。帝于是奏永宁太后，废爽兄弟。时景帝 `r n("司马师")` 为中护军，将兵屯司马门。帝列阵阙下 `r n("宫庭，帝王所居之处")` ，经爽门。爽帐下督严世上楼，引弩将射帝，孙谦止之曰：“事未可知。”三注 `r n("投;击")` 三止，皆引其肘不得发。大司农桓范出赴爽，蒋济言于帝曰：“智囊往矣。”帝曰：“爽与范内疏而智不及，驽马恋栈豆 `r n("劣马贪恋马厩里的豆料。比喻平庸的人目光短浅，贪恋禄位、家室等眼前利益")` ，必不能用也。”于是假司徒高柔节，行大将军事，领爽营，谓柔曰：“君为周勃 `r n("西汉时期开国将领、宰相，名将周亚夫之父")` 矣。”命太仆王观行中领军，摄羲营。帝亲帅太尉蒋济等勒兵 `r n("整治、指挥军队")` 出迎天子，屯于洛水浮桥，上奏曰：“先帝诏陛下、秦王及臣升于御床，握臣臂曰‘深以后事为念’。今大将军爽背弃顾命，败乱国典，内则僣 `r n("古同“僭”。超越本分")` 拟，外专威权。群官耍职，皆置所亲；宿卫 `r n("值宿宫禁，担任警卫")` 旧人，并见斥黜 `r n("弃逐；黜免")` 。根据盘牙 `r n("交相连结")` ，纵恣日甚。又以黄门张当为都监 `r n("三国时称内侍官")` ，专共交关，伺候神器。天下汹汹，人怀危惧。陛下便为寄坐 `r n("谓居客位。比喻地位不稳且无实权")` ，岂得久安？此非先帝诏陛下及臣升御床之本意也。臣虽朽迈，敢忘前言。昔赵高极意 `r n("恣意")` ，秦是以亡；吕霍 `r n("汉高祖后吕雉及汉宣帝后霍成君的并称")` 早断，汉祚永延。此乃陛下之殷鉴，臣授命之秋也。公卿群臣皆以爽有无君之心，兄弟不宜典兵 `r n("统领军队;掌管军事")` 宿卫；奏皇太后，皇太后敕如奏施行。臣辄敕主者及黄门令罢爽、羲，训吏兵各以本官侯就第 `r n("免职回家")` ，若稽留 `r n("停留")` 车驾，以军法从事。臣辄力疾 `r n("动作有力而迅速")` 将兵诣 `r n("前往,去到")` 洛水浮桥，伺察非常。”爽不通奏 `r n("通报，奏告")` ，留车驾宿伊水南，伐树为鹿角 `r n("为阻止敌军前进而设置的树枝、荆棘之类的障碍物")` ，发屯兵数千人以守。桓范果劝爽奉天子幸许昌，移檄 `r n("发布文告晓示")` 征天下兵。爽不能用，而夜遣侍中许允、尚书陈泰诣帝 `r co("略许允、陈泰说服爽之经过。[《三国志》](#三国志-曹爽-爽得宣王奏事)")` ，观望风旨 `r n("意旨，意图")` 。帝数其过失，事止免官。泰还以报爽劝之通奏。帝又遣爽所信殿中校尉尹大目谕爽，指洛水为誓，爽意信之。桓范等援引古今，谏说万端，终不能从。乃曰：“司马公正当欲夺吾权耳。吾得以侯还第 `r n("官吏辞职或解职而返回私宅")` ，不失为富家翁。”范拊膺 `r n("捶胸。表示哀痛或悲愤，常用于安慰人的话语")` 曰：“坐卿。灭吾族矣！”遂通帝奏。既而有司劾黄门张当，并发爽与何晏等反事，乃收爽兄弟及其党与何晏、丁谧、邓扬、毕轨、李胜、桓范等诛之。蒋济曰：“曹真之勋，不可以不祀。”帝不听。初，爽司马鲁芝、主簿杨综斩关 `r n("砍断门闩。泛指攻破城门")` 奔爽。及爽之将归罪也，芝、综泣谏曰：“公居伊周 `r n("商·伊尹和西周·周公旦。两人都曾摄政，后常并称。亦指执掌朝政的大臣")` 之任，挟天子，杖天威，孰敢不从？舍此而欲就东市，岂不痛哉！”有司奏收芝、综科罪，帝赦之，曰：“以劝事君者。”二月，天子以帝为丞相，增封颍川之繁昌、鄢陵、新汲、父城，并前八县，邑二万户，奏事不名。固让丞相。冬十二月，加九锡 `r n("天子优礼大臣，所赐与的车马、衣服、乐器、朱户、纳陛、虎贲、弓矢、?钺、秬鬯等九种物品")` 之礼，朝会不拜。固让九锡。 
+嘉平 `r n("249年四月-254年十月，是三国时期曹魏的君主魏齐王曹芳的第二个年号，共计6年。这也是曹魏政权的第六个年号。")` 元年春正月甲午，天子谒高平陵，爽兄弟皆从。是日，太白袭月。帝于是奏永宁太后，废爽兄弟。时景帝 `r n("司马师")` 为中护军，将兵屯司马门。帝列阵阙下 `r n("宫庭，帝王所居之处")` ，经爽门。爽帐下督严世上楼，引弩将射帝，孙谦止之曰：“事未可知。”三注 `r n("投;击")` 三止，皆引其肘不得发。大司农桓范出赴爽，蒋济言于帝曰：“智囊往矣。”帝曰：“爽与范内疏而智不及，驽马恋栈豆 `r n("劣马贪恋马厩里的豆料。比喻平庸的人目光短浅，贪恋禄位、家室等眼前利益")` ，必不能用也。”于是假司徒高柔节，行大将军事，领爽营，谓柔曰：“君为周勃 `r n("西汉时期开国将领、宰相，名将周亚夫之父")` 矣。”命太仆王观行中领军，摄羲营。帝亲帅太尉蒋济等勒兵 `r n("整治、指挥军队")` 出迎天子，屯于洛水浮桥，上奏曰：“先帝诏陛下、秦王及臣升于御床，握臣臂曰‘深以后事为念’。今大将军爽背弃顾命，败乱国典，内则僣 `r n("古同“僭”。超越本分")` 拟，外专威权。群官耍职，皆置所亲；宿卫 `r n("值宿宫禁，担任警卫")` 旧人，并见斥黜 `r n("弃逐；黜免")` 。根据盘牙 `r n("交相连结")` ，纵恣日甚。又以黄门张当为都监 `r n("三国时称内侍官")` ，专共交关，伺候神器。天下汹汹，人怀危惧。陛下便为寄坐 `r n("谓居客位。比喻地位不稳且无实权")` ，岂得久安？此非先帝诏陛下及臣升御床之本意也。臣虽朽迈，敢忘前言。昔赵高极意 `r n("恣意")` ，秦是以亡；吕霍 `r n("汉高祖后吕雉及汉宣帝后霍成君的并称")` 早断，汉祚永延。此乃陛下之殷鉴，臣授命之秋也。公卿群臣皆以爽有无君之心，兄弟不宜典兵 `r n("统领军队;掌管军事")` 宿卫；奏皇太后，皇太后敕如奏施行。臣辄敕主者及黄门令罢爽、羲，训吏兵各以本官侯就第 `r n("免职回家")` ，若稽留 `r n("停留")` 车驾，以军法从事。臣辄力疾 `r n("动作有力而迅速")` 将兵诣 `r n("前往,去到")` 洛水浮桥，伺察非常。”爽不通奏 `r n("通报，奏告")` ，留车驾宿伊水南，伐树为鹿角 `r n("为阻止敌军前进而设置的树枝、荆棘之类的障碍物")` ，发屯兵数千人以守。桓范果劝爽奉天子幸许昌，移檄 `r n("发布文告晓示")` 征天下兵。爽不能用，而夜遣侍中许允、尚书陈泰诣帝 `r co("略许允、陈泰说服爽之经过。[《三国志》](#三国志-曹爽-爽得宣王奏事)")` ，观望风旨 `r n("意旨，意图")` 。帝数其过失，事止免官。泰还以报爽劝之通奏。帝又遣爽所信殿中校尉尹大目谕爽，指洛水为誓，爽意信之。桓范等援引古今，谏说万端，终不能从。乃曰：“司马公正当欲夺吾权耳。吾得以侯还第 `r n("官吏辞职或解职而返回私宅")` ，不失为富家翁。”范拊膺 `r n("捶胸。表示哀痛或悲愤，常用于安慰人的话语")` 曰：“坐卿。灭吾族矣！”遂通帝奏。既而有司劾黄门张当，并发爽与何晏等反事，乃收爽兄弟及其党与何晏、丁谧、邓扬、毕轨、李胜、桓范等诛之。蒋济曰：“曹真之勋，不可以不祀 `r n("绝嗣")` `r co("[《三国志》此处注②](#三国志-曹爽-爽等伏诛)，以孙熙为后")` 。”帝不听。初，爽司马鲁芝、主簿杨综斩关 `r n("砍断门闩。泛指攻破城门")` 奔爽。及爽之将归罪也，芝、综泣谏曰：“公居伊周 `r n("商·伊尹和西周·周公旦。两人都曾摄政，后常并称。亦指执掌朝政的大臣")` 之任，挟天子，杖天威，孰敢不从？舍此而欲就东市，岂不痛哉！”有司奏收芝、综科罪，帝赦之，曰：“以劝事君者。”二月，天子以帝为丞相，增封颍川之繁昌、鄢陵、新汲、父城，并前八县，邑二万户，奏事不名。固让丞相。冬十二月，加九锡 `r n("天子优礼大臣，所赐与的车马、衣服、乐器、朱户、纳陛、虎贲、弓矢、?钺、秬鬯等九种物品")` 之礼，朝会不拜。固让九锡。 
 
 二年春正月，天子命帝立庙于洛阳，置左右长史，增掾属、舍人满十人，岁举掾属任御史、秀才各一人，增官骑百人，鼓吹十四人，封子肜平乐亭侯，伦安乐亭侯。帝以久疾不任朝请 `r n("汉律﹐诸侯春天朝见皇帝叫朝﹐秋天朝见皇帝叫请。泛称朝见皇帝")` ，每有大事，天子亲幸第以谘访焉。兖州刺史令狐愚、太尉王凌贰于帝，谋立楚王彪。 
 
@@ -124,12 +124,15 @@ knitr::include_graphics("images/map-sanguo.jpeg")
 
 ##### 爽得宣王奏事 {#三国志-曹爽-爽得宣王奏事}
 
-爽得宣王奏事，不通，迫窘不知所为。①大司农沛国桓范闻兵起，不应太后召，矫诏开平昌门，拔取剑戟，略将门候，南奔爽。宣王知，曰：“范画策，爽必不能用范计。”范说爽使车驾幸许昌，招外兵。爽兄弟犹豫未决，范重谓羲曰：“当今日，卿门户求贫贱复可得乎？且匹夫持质一人，尚欲望活，今卿与天子相随，令于天下，谁敢不应者？”羲犹不能纳。侍中许允、尚书陈泰说爽，使早自归罪。爽于是遣允、泰诣宣王，归罪请死，乃通宣王奏事。②遂免爽兄弟，以侯还第。③
+爽得宣王奏事，不通，迫窘不知所为。①大司农 `r fn("①官名。西汉武帝太初元年(前104)改大农令置。简称大农。秩中二千石，列位九卿。掌管全国租赋收入和国家财政开支，凡百官俸禄、军费、各级政府机构经费等由其支付，管理各地仓储、水利，官府农业、手工业、商业的经营，调运货物，管制物价等。有丞二员，部丞若干员。属官有太仓、均输、平准、都内、籍田五令丞，斡官、铁市两长丞。郡国诸仓、农监、都水六十五官长，边郡的农都尉等屯田官员，亦皆属之。新莽先后改名羲和、纳言。东汉复故，机构减省，置丞、部丞各一员，属官有太仓、平准、导官三令丞，余皆罢省。地方都水、盐铁等官划归郡县主管。原属少府管理的帝室财政开支则并归大司农。三国沿置。魏三品，当时在诸郡县置有典农中郎将、校尉、都尉等屯田官，亦皆属之。西晋领太仓、籍田、导官三令，襄国都水长，东西南北部护漕掾，三品。东晋南北朝国家财政归尚书省主管，大司农或置或省，所掌惟仓储园苑及供膳之庶务。晋哀帝时曾省并都水台，孝武帝宁康元年(373)复置。南朝宋文帝元嘉二十九年(452)省，孝武帝大明四年(460)复置，三品。丞一员。领太仓、导官、籍田令丞。梁改名“司农卿”。北魏仍置，孝文帝太和十七年(493)定为二品上，二十三年复次职令，改三品。北齐改名“司农卿”。金朝复置，掌管农政，兼监察各地官吏，为司农司长官，正二品。属官有司农卿三员，司农少卿三员。又领各路行司农司。元朝仁宗皇庆二年(1313)置四员，为大司农司长官，管理农桑、水利、学校、饥荒之事，从一品。属官有卿二员，少卿二员，丞二员。② “户部尚书”别称。")` 沛国桓范闻兵起，不应太后召，矫诏开平昌门，拔取剑戟，略将门候 `r fn("官名。主城门或军营门。西汉城门校尉属官有十二城门候，掌按时开闭城门。东汉沿置。城门每门候一人，六百石。又，诸将军营部亦置。隋朝为左右监门府属官。隋高祖仁寿三年 (603)于监门府置门候一百二十人。炀帝时增至二百四十人，正七品，与左右门尉分掌门禁守卫。")` ，南奔爽。宣王知，曰：“范画策，爽必不能用范计。”范说爽使车驾幸许昌，招外兵。爽兄弟犹豫未决，范重谓羲曰：“当今日，卿门户求贫贱复可得乎？且匹夫持质一人，尚欲望活，今卿与天子相随，令于天下，谁敢不应者？”羲犹不能纳。侍中许允、尚书陈泰说爽，使早自归罪。爽于是遣允、泰诣宣王，归罪请死，乃通宣王奏事。②遂免爽兄弟，以侯还第。③
 
-①干宝《晋纪》曰：爽留车驾宿伊水 `r n("洛水支流。源出河南栾川县伏牛山北麓，东北流至偃师县南入洛水。")` 南，伐木为鹿角，发 `r n("派遣")` 屯甲兵数千人以为卫。《魏末传》曰：宣王语弟孚，陛下在外不可露宿，促送帐幔、太官食具诣行在所。②干宝《晋书》曰：桓范出赴爽，宣王谓蒋济曰：“智囊往矣。”济曰：“范则智矣，驽马恋栈豆，爽必不能用也。”《世语》曰：宣王使许允、陈泰解语爽，蒋济亦与书达宣王之旨，又使爽所信殿中校尉尹大目谓爽，唯免官而已，以洛水为誓。爽信之，罢兵。《魏氏春秋》曰：爽既罢兵，曰：“我不失作富家翁。”范哭曰：“曹子丹佳人，生汝兄弟，犊耳！何图今日坐汝等族灭矣！”③《魏末传》曰：爽兄弟归家。敕洛阳县发民八百人，使尉部围爽第四角，角作高楼，令人在上望视爽兄弟举动。爽计穷愁闷，持弹到后园中，楼上人便唱言“故大将军东南行！”爽还厅事上，与兄弟共议，未知宣王意深浅，作书与宣王曰：“贱子爽哀惶恐怖，无状招祸，分受屠灭。前遣家人迎粮，于今未反，数日乏匮，当烦见饷，以继旦夕。”宣王得书大惊，即答书曰：“初不知乏粮，甚怀踧踖。令致米一百斛，并肉脯、盐豉、大豆。”寻送。爽兄弟不达变数，即便喜欢，自谓不死。
-初，张当私以所择才人张、何等与爽，疑其有奸，收当治罪。当陈爽与晏等阴谋反逆，并先习兵，须三月中欲发，于是收晏等下狱。会公卿朝臣廷议，以为“《春秋》之义，‘君亲无将，将而必诛’。爽以支属，世蒙殊宠，亲受先帝握手遗诏，托以天下，而包藏祸心，蔑弃顾命，乃与晏、飏及当等谋图神器，范党同罪人，皆为大逆不道”。于是收爽、羲、训、晏、飏、谧、轨、胜、范、当等，皆伏诛，夷三族。①嘉平中，绍功臣世，封真族孙熙为新昌亭侯，邑三百户，以奉真后。②
+①干宝《晋纪》曰：爽留车驾宿伊水 `r n("洛水支流。源出河南栾川县伏牛山北麓，东北流至偃师县南入洛水。")` 南，伐木为鹿角，发 `r n("派遣")` 屯甲兵数千人以为卫。《魏末传》曰：宣王语弟孚，陛下在外不可露宿，促送帐幔、太官食具诣行在所。 `r co("障眼法？")` ②干宝《晋书》曰：桓范出赴爽，宣王谓蒋济曰：“智囊往矣。”济曰：“范则智矣，驽马恋栈豆，爽必不能用也。”《世语》曰：宣王使许允、陈泰解语爽，蒋济亦与书达宣王之旨，又使爽所信殿中校尉尹大目谓爽，唯免官而已，以洛水为誓。爽信之，罢兵。《魏氏春秋》曰：爽既罢兵，曰：“我不失作富家翁。”范哭曰：“曹子丹 `r n("曹真")` 佳人，生汝兄弟，犊 `r co("言其犹如小儿")` 耳！何图 `r n("哪里想到")` 今日坐汝等族灭矣！”③《魏末传》曰：爽兄弟归家。敕洛阳县发民八百人，使尉部围爽第四角，角作高楼，令人在上望视爽兄弟举动。爽计穷愁闷，持弹到后园中，楼上人便唱言“故大将军东南行！”爽还厅事上，与兄弟共议，未知宣王意深浅，作书与宣王曰：“贱子爽哀惶恐怖，无状招祸，分受屠灭。前遣家人迎粮，于今未反 `r n("通“返”")` ，数日乏匮，当烦见饷 `r n("食物")` ，以继旦夕。”宣王得书大惊，即答书曰：“初不知乏粮，甚怀踧踖 `r n("恭敬不安，意谓恭敬而不自然的样子")` 。令致米一百斛，并肉脯、盐豉、大豆。”寻送。爽兄弟不达变数，即便喜欢，自谓不死。
 
-①《魏略》曰：邓飏字玄茂，邓禹后也。少得士名于京师。明帝时为尚书郎，除洛阳令，坐事免，拜中郎，又入兼中书郎。初，飏与李胜等为浮华友，及在中书，浮华事发，被斥出，遂不复用。正始初，乃出为颍川太守，转大将军长史，迁侍中尚书。飏为人好货，前在内职，许臧艾授以显官，艾以父妾与飏，故京师为之语曰：“以官易妇邓玄茂。”每所荐达，多如此比。故何晏选举不得人，颇由飏之不公忠，遂同其罪，盖由交友非（奇）〔其〕才。（魏略曰）丁谧字彦靖。父斐字文侯。初，斐随太祖，太祖以斐乡里，特饶爱之。斐性好货，数请求犯法，辄得原宥。为典军校尉，总摄内外，每所陈说，多见从之。建安末，从太祖征吴。斐随行，自以家牛羸困，乃私易官牛，为人所白，被收送狱，夺官。其后太祖问斐曰：“文侯，印绶所在？”斐亦知见戏，对曰：“以易饼耳。”太祖笑，顾谓左右曰：“东曹毛掾数白此家，欲令我重治，我非不知此人不清，良有以也。我之有斐，譬如人家有盗狗而善捕鼠，盗虽有小损，而完我囊贮。”遂复斐官，听用如初。后数岁，病亡。谧少不肯交游，但博观书传。为人沉毅，颇有才略。太和中，常住邺，借人空屋，居其中。而诸王亦欲借之，不知谧已得，直开门入。谧望见王，交脚卧而不起，而呼其奴客曰：“此何等人？促呵使去。”王怒其无礼，还具上言。明帝收谧，系邺狱，以其功臣子，原出。后帝闻其有父风，召拜度支郎中。曹爽宿与相亲，时爽为武卫将军，数为帝说其可大用。会帝崩，爽辅政，乃拔谧为散骑常侍，遂转尚书。谧为人外似疏略，而内多忌。其在台阁，数有所弹驳，台中患之，事不得行。又其意轻贵，多所忽略，虽与何晏、邓飏等同位，而皆少之，唯以势屈于爽。爽亦敬之，言无不从。故于时谤书，谓“台中有三狗，二狗崖柴不可当，一狗凭默作疽囊”。三狗，谓何、邓、丁也。默者，爽小字也。其意言三狗皆欲啮人，而谧尤甚也。奏使郭太后出居别宫，及遣乐安王使北诣邺，又遣文钦令还淮南，皆谧之计。司马宣王由是特深恨之。毕轨字昭先。父字子礼，建安中为典农校尉。轨以才能，少有名声。明帝在东宫时，轨在文学中。黄初末，出为长史。明帝即位，入为黄门郎，子尚公主，居处殷富。迁并州刺史。其在并州，名为骄豪。时杂虏数为暴，害吏民，轨辄出军击鲜卑轲比能，失利。中护军蒋济表曰：“毕轨前失，既往不咎，但恐是后难可以再。凡人材有长短，不可强成。轨文雅智意，自为美器。今失并州，换置他州，若入居显职，不毁其德，于国事实善。此安危之要，唯圣恩察之。”至正始中，入为中护军，转侍中尚书，迁司隶校尉。素与曹爽善，每言于爽，多见从之。李胜字公昭。父休字子朗，有智略。张鲁前为镇北将军，休为司马，家南郑。时汉中有甘露降，子朗见张鲁精兵数万人，有四塞之固，遂建言赤气久衰，黄家当兴，欲鲁举号，鲁不听。会鲁破，太祖以其劝鲁内附，赐爵关内侯，署散官骑从，诣邺。至黄初中，仕历上党、巨鹿二郡太守，后以年老还，拜议郎。胜少游京师，雅有才智，与曹爽善。明帝禁浮华，而人白胜堂有四窗八达，各有主名。用是被收，以其所连引者多，故得原，禁锢数岁。帝崩，曹爽辅政，胜为洛阳令。夏侯玄为征西将军，以胜为长史。玄亦宿与胜厚。骆谷之役，议从胜出，由是司马宣王不悦于胜。累迁荥阳太守、河南尹。胜前后所宰守，未尝不称职，为尹岁余，厅事前屠苏坏，令人更治之，小材一枚激堕，正挝受符吏石虎头，断之。后旬日，迁为荆州刺史，未及之官而败也。桓范字元则，世为冠族。建安末，入丞相府。延康中，为羽林左监。以有文学，与王象等典集《皇览》。明帝时为中领军尚书，迁征虏将军、东中郎将，使持节都督青、徐诸军事，治下邳。与徐州刺史（邹）〔郑〕岐争屋，引节欲斩岐，为岐所奏，不直，坐免还。复为兖州刺史，怏怏不得意。又闻当转为冀州牧。是时冀州统属镇北，而镇北将军吕昭才实仕进，本在范后。范谓其妻仲长曰：“我宁作诸卿，向三公长跪耳，不能为吕子展屈也。”其妻曰：“君前在东，坐欲擅斩徐州刺史，众人谓君难为作下，今复羞为吕屈，是复难为作上也。”范忿其言触实，乃以刀环撞其腹。妻时怀孕，遂堕胎死。范亦竟称疾，不赴冀州。正始中拜大司农。范前在台阁，号为晓事，及为司农，又以清省称。范尝抄撮《汉书》中诸杂事，自以意斟酌之，名曰《世要论》。蒋济为太尉，尝与范会社下，群卿列坐有数人，范怀其所撰，欲以示济，谓济当虚心观之。范出其书以示左右，左右传之示济，济不肯视，范心恨之。因论他事，乃发怒谓济曰：“我祖薄德，公辈何似邪？”济性虽强毅，亦知范（壳）〔刚〕毅，睨而不应，各罢。范于沛郡，仕次在曹真后。于时曹爽辅政，以范乡里老宿，于九卿中特敬之，然不甚亲也。及宣王起兵，闭城门，以范为晓事，乃指召之，欲使领中领军。范欲应召，而其子谏之，以为车驾在外，不如南出。范疑有顷，儿又促之。范欲去而司农丞吏皆止范。范不从，乃突出至平昌城门，城门已闭。门候司蕃，故范举吏也，范呼之，举手中版以示之，矫曰：“有诏召我，卿促开门！”蕃欲求见诏书，范呵之，言“卿非我故吏邪，何以敢尔？”乃开之。范出城，顾谓蕃曰：“太傅图逆，卿从我去。”蕃徒行不能及，遂避侧。范南见爽，劝爽兄弟以天子诣许昌，征四方以自辅。爽疑，羲又无言。范自谓羲曰：“事昭然，卿用读书何为邪？于今日卿等门户倒矣！”俱不言。范又谓羲曰：“卿别营近在阙南，洛阳典农治在城外，呼召如意。今诣许昌，不过中宿，许昌别库，足相被假，所忧当在谷食，而大司农印章在我身。”羲兄弟默然不从，（甲）〔中〕夜至五鼓，爽乃投刀于地，谓诸从驾群臣曰：“我度太傅意，亦不过欲令我兄弟向己也。我独有以不合于远近耳！”遂进谓帝曰：“陛下作诏免臣官，报皇太后令。”范知爽首免而己必坐唱义也。上乃曰：“老子今兹坐卿兄弟族矣！”爽等既免，帝还宫，遂令范随从。到洛水浮桥北，望见宣王，下车叩头而无言。宣王呼范姓曰：“桓大夫何为尔邪？”车驾入宫，有诏范还复位。范诣阙拜章谢，待报。会司蕃诣鸿胪自首，具说范前临出所道。宣王乃忿然曰：“诬人以反，于法何应？”主者曰：“科律，反受其罪。”乃收范于阙下。时人持范甚急，范谓部官曰：“徐之，我亦义士耳。”遂送廷尉。《世语》曰：初，爽梦二虎衔雷公，雷公若二升碗，放着庭中。爽恶之，以问占者，灵台丞马训曰：“忧兵。”训退，告其妻曰：“爽将以兵亡，不出旬日。”《汉晋春秋》曰：安定皇甫谧以九年冬梦至洛阳，自庙出，见车骑甚众，以物呈庙云：“诛大将军曹爽。”寤而以告其邑人，邑人曰：“君欲作曹人之梦乎？朝无公孙彊如何？且爽兄弟典重兵，又权尚书事，谁敢谋之？”谧曰：“爽无叔振铎之请，苟失天机则离矣，何恃于彊？昔汉之阎显，倚母后之尊，权国威命，可谓至重矣，阉人十九人一旦尸之，况爽兄弟乎？”《世语》曰：初，爽出，司马鲁芝留在府，闻有事，将营骑斫津门出赴爽。爽诛，擢为御史中丞。及爽解印绶，将出，主簿杨综止之曰：“公挟主握权，舍此以至东市乎？”爽不从。有司奏综导爽反，宣王曰：“各为其主也。”宥之，以为尚书郎。芝字世英，扶风人也。以后仕进至特进光禄大夫。综字初伯，后为安东将军司马文王长史。臣松之案：夏侯湛为芝铭及干宝《晋纪》并云爽既诛，宣王即擢芝为并州刺史，以综为安东参军。与《世语》不同。②干宝《晋纪》曰：蒋济以曹真之勋力，不宜绝祀，故以熙为后。济又病其言之失信于爽，发病卒。
+##### 爽等伏诛 {#三国志-曹爽-爽等伏诛}
+
+初，张当私以所择才人张、何等与爽，疑其有奸，收当治罪。当陈爽与晏等阴谋反逆，并先习兵，须三月中欲发，于是收晏等下狱 `r co("懿早备，唯爽不知尔。见[《晋书》](#晋书-司马懿-正始九年)")` 。会公卿朝臣廷议，以为“《春秋》之义，‘君 `r n("君主")` 亲 `r n("父母")` 无将 `r n("叛乱")` ，将而必诛’。爽以支属，世蒙殊宠，亲受先帝握手遗诏，托以天下，而包藏祸心，蔑弃顾命，乃与晏、飏及当等谋图神器，范党同罪人，皆为大逆不道”。于是收爽、羲、训、晏、飏、谧、轨、胜、范、当等，皆伏诛，夷三族。①嘉平中，绍 `r n("绍封")` 功臣世，封真族孙熙为新昌亭侯，邑三百户，以奉真后。②
+
+①《魏略》曰：**邓飏**字玄茂，邓禹后也。少得士名于京师。明帝时为尚书郎，除洛阳令，坐事免，拜中郎，又入兼中书郎。初，飏与李胜等为浮华友，及在中书，浮华事发，被斥出，遂不复用。`r co("此乃少帝病弊")` 正始初，乃出为颍川太守，转大将军长史，迁侍中尚书。飏为人好货 `r n("贪爱财物")` ，前在内职，许臧艾授以显官，艾以父妾 `r co("小妈亦为财物，不伦。收之，不齿")` 与飏，故京师为之语曰：“以官易妇邓玄茂。”每所荐达，多如此比。故何晏选举不得人，颇由飏之不公忠，遂同其罪，盖由交友非（奇）〔其〕才。（魏略曰）**丁谧**字彦靖。父*斐*字文侯。初，斐随太祖，太祖以斐乡里，特饶爱之。斐性好货，数请求犯法，辄得原宥 `r n("原谅宽恕")` 。为典军校尉，总摄内外，每所陈说，多见从之 `r co("曹操信之，盖因其有才能")` 。建安末，从太祖征吴。斐随行，自以家牛羸困 `r n("疲惫，瘦弱困乏")` ，乃私易官牛，为人所白，被收送狱，夺官。其后太祖问斐曰：“文侯，印绶所在？”斐亦知见戏，对曰：“以易饼耳。”太祖笑，顾谓左右曰：“东曹 `r fn("①官署名。西汉丞相府所属诸曹之一。东汉时三公府亦置。据《后汉书·百官志》，太尉所属东曹主二千石长吏迁除选举及军吏。领其事者为东曹掾，秩比四百石。汉末曹操于相府亦置东、西曹，皆典选举。东曹典府外官吏。三国魏大将军、丞相(相国)，蜀丞相、大司马及吴车骑将军等并置。西晋初，诸公及开府位从公者皆置，位在西曹下，赵王伦为相国时增置属吏。西晋末，丞相府一度置参军主东曹事。东晋省。十六国又置，南朝宋、齐亦置。梁于诸公府置，以督护主之。②部落名。十六国前秦建元三年(367)匈奴右贤王死，秦分其部落为二，使其二子分统之，号东、西曹。")` 毛掾数白此家，欲令我重治，我非不知此人不清，良 `r n("的确，诚然")` 有以 `r n("所以，原因")` 也。我之有斐，譬如人家有盗狗而善捕鼠，盗虽有小损，而完我囊贮 `r n("贮于袋中的物品")`  `r co("曹操视斐为盗狗，斐亦知也，反以为荣。一主一狗，其乐融融")` 。”遂复斐官，听用如初。后数岁，病亡。谧少不肯交游，但博观书传。为人沉毅，颇有才略。太和 `r n("三国魏明帝年号(227—233)。凡七年。")` 中，常住邺，借人空屋，居其中。而诸王亦欲借之，不知谧已得，直开门入。谧望见王，交脚卧而不起，而呼其奴客曰：“此何等人？促呵使去。”王怒其无礼，还具上言。明帝收谧，系邺狱，以其功臣子，原 `r n("宽恕，赦免")` 出。后帝闻其有父风 `r co("可见斐之才略")` ，召拜度支郎中 `r fn("官名，也称度支郎。魏晋南北朝尚书省（台）置尚书曹，度支郎为曹长官，掌贡税租赋的统计、调拨、支出等。至唐朝，只称度支郎中而不再称度支郎，掌全国租税物产，水陆道途之利，每年计算收入与支出。宋朝也置，掌计算军费，根据全国租税贡赋的收入而制订开支计划。清朝末年度支部也置度支郎中。见《旧唐书·职官二·度支郎中》、《新唐书·百官一·户部》、《宋史·职官三·度支郎中》、《清史稿·职官六·度支郎中》。")` 。曹爽宿与相亲，时爽为武卫将军，数为帝说其可大用。会帝崩，爽辅政，乃拔谧为散骑常侍，遂转尚书。谧为人外似疏略 `r n("远大的谋略，或指粗略;粗心大意")` ，而内多忌。其在台阁 `r fn("①东汉至隋、唐对尚书台 (省) 的别称。《后汉书 ·仲长统传》： “虽置三公，事归台阁。”李贤注： “台阁谓尚书也。”②指御史台、秘书监。《三国志·王肃传》裴松之注引《魏略》： “兰台为外台，秘书为内阁，台阁一也。”③北宋对御史台官、诸阁职的简称。")` ，数有所弹驳，台中患之，事不得行。又其意轻贵，多所忽略，虽与何晏、邓飏等同位，而皆少 `r n("轻视,看不起")` 之，唯以势屈于爽。爽亦敬之，言无不从。故于时谤书，谓“台中有三狗，二狗崖柴 `r n("形容张口欲咬人之状")` 不可当，一狗凭 `r co("倚靠爽")` 默作疽囊 `r n("毒疮植根处，常用来暗喻群恶聚集之所")` ”。三狗，谓何、邓、丁也。[默者，爽小字也]{.underline}。其意言三狗皆欲啮人，而谧尤甚也。奏使郭太后出居别宫 `r co("郭太后手段非常")` `r fn("黄初二年（221年），曹丕遣使赐死在邺城的甄夫人，这是因郭贵嫔受宠所致。《资治通鉴》《魏略》以及《汉晋春秋》记载，郭氏以谗言谮害甄氏，曹丕遂大怒赐死")` ，及遣乐安王使北诣邺，又遣*文钦*令还淮南，皆谧之计。`r co("才略只作阴谋")` 司马宣王由是特深恨之。**毕轨**字昭先。父字子礼，建安中为典农校尉。轨以才能，少有名声。明帝在东宫时，轨在文学中 `r fn("官名，文学掾、文学史及太子文学的简称。汉朝州郡和王国皆置，以通晓经书者担任，掌管学校教育，教授诸生，或掌典章故事，备顾问侍从。三国魏置太子文学，诸王和侯国也置。晋朝诸王及世子置。南朝宋、齐王国置，梁、陈皇弟、皇子府置，北魏、北齐皇子置。隋、唐亲王府置，掌校勘典籍、侍从文章。唐德宗时改诸州经学博士为文学，掌以五经教授诸生，见《通典·职官十二》、《晋书·职官志》、《新唐书·百官四下》。")` 。黄初末 `r co("曹丕即位")` ，出为长史。明帝即位，入为黄门郎，子尚 `r n("娶帝王之女为妻")` 公主，居处殷富。迁并州刺史。其在并州，名为骄豪。时杂虏数为暴，害吏民，轨辄出军击鲜卑轲比能 `r fn("轲比能“勇健，断法平端，不贪财物”，众人推举他为大人（首领）。他的部落接近汉的北方边境，自从袁绍据河北后，有不少汉人逃到塞外投靠轲比能，他们教晓鲜卑人“作兵器铠楯”，又教授文字。轲比能仿效中原方式管理部众，“出入弋猎，建立旌麾，以鼓节为进退”。他曾经协助曹操敉平地方叛乱，也曾经侵扰汉境，被曹彰打得大败，退出塞外。轲比能后来恢复向中原政权贡献。220年，轲比能遣使献马，曹丕立他为附义王。其后轲比能与东部鲜卑大人素利及步度根争战。224年，轲比能又进攻素利，魏国出兵干预，打败了轲比能的部下琐奴，轲比能于是致书向魏解释。此后轲比能的部众变得强盛，“控弦十余万骑”。他每次掠得财物，均与众平分，“终无所私，故得众死力，余部大人皆敬惮之”，然犹未能及得上以前檀石槐时期的强大。228年，其女婿郁筑鞬遭田豫攻击，派三万骑兵相救，经阎志劝解，带兵离去。233年，轲比能引诱步度根结和亲，于是步度根归附轲比能，侵袭并州。后来轲比能杀了步度根。235年，魏幽州刺史王雄派刺客韩龙杀死轲比能，立其弟为首领。《晋书》称轲比能之后为契丹。")` ，失利。中护军 `r fn("官名。东汉置，掌军中参谋、协调诸部。《后汉书 ·班彪列传下》： 明帝永元(58—75)初，“大将军窦宪出征匈奴，以(班)固为中护军，与参谋。”献帝建安十二年(207)曹操改护军置。魏沿置，四品，资重者可迁护军将军，掌武官选举，与中领军同掌禁军，出征则督护诸将; 隶中领军 (领军将军)。入晋则不隶领军，亦不典武选，升三品，自领营兵; 东晋元帝永昌元年 (322) 省并入领军，明帝太宁二年 (324) 复分置，掌督护京师以外地方诸军。属官有长史、司马、功曹、主薄、五官，受命出征则置参军。南朝沿置，宋三品，梁十四班，陈三品、中二千石。北魏则侍臣带护军始加中字，孝文帝太和十七年 (493)定为二品中，二十三年定为三品。北齐三品，管四中关津，舆驾出则护驾，统东西南北四中郎将府及诸关尉、津尉，属官有长史、司马、功曹、五官、主簿、录事及诸曹参军。唐德宗贞元十二年 (796) 亦置，以宦官充任，为左右神威军监军使加号，以示尊宠。")` 蒋济表曰：“毕轨前失，既往不咎，但恐是后难可以再。凡人材有长短，不可强成。轨文雅智意，自为美器。今失并州，换置他州，若入居显职，不毁其德，于国事实善。此安危之要，唯圣恩察之。”至正始中，入为中护军，转侍中尚书，迁司隶校尉。素与曹爽善，每言于爽，多见从之。**李胜**字公昭。父*休*字子朗，有智略。张鲁 `r fn("字公祺，沛国丰(今属江苏)人。祖父张陵创立五斗米道。他初被益州牧刘焉授以督义司马，奉命与张修进攻汉中。后杀张修并收编其众，占据汉中。推行五斗米道，实行政教合一。境内安定，生产发展，户口增加。建安二十年(215)遣弟张卫迎战曹操于阳平关，兵败，封府库而奔巴中，不久降操，拜镇南将军，封阆中侯。卒后谥原侯。")` 前为镇北将军，休为司马，家南郑。时汉中有甘露降，子朗见张鲁精兵数万人，有四塞之固，遂建言赤气久衰，黄家当兴，欲鲁举号，鲁不听。会鲁破，太祖以其劝鲁内附，赐爵关内侯，署 `r n("代理、暂任或试充官职")` 散官骑从，诣邺。至黄初中，仕历上党、巨鹿二郡太守，后以年老还，拜议郎 `r fn("汉 代设置；为光禄勋所属郎官之一，掌顾问应对，无常事。 汉 秩比六百石。多征贤良方正之士任之。 晋 以后废")` 。胜少游京师，雅有才智，与曹爽善。明帝禁浮华，而人白胜堂有四窗八达，各有主名。用是被收，以其所连引者多，故得原，禁锢 `r n("监禁；关押")` 数岁 `r co("得原后为何被禁锢数岁")` 。帝崩，曹爽辅政，胜为洛阳令。夏侯玄为征西将军，以胜为长史。玄亦宿与胜厚。骆谷之役，议从胜出，由是司马宣王不悦于胜。累迁荥阳太守、河南尹。胜前后所宰守，未尝不称职，为尹岁余，厅事前屠苏 `r n("即罘罳 fú sī。一种屏风，设在门外")` 坏，令人更治之，小材一枚激堕，正挝 `r n("zhuā。敲打,击")` 受符吏 `r n("符官。道教指守护符箓的神官")` 石虎头，断之。后旬日，迁为荆州刺史，未及之官而败也。**桓范**字元则，世为冠族 `r n("显贵的豪门世族")` 。建安末，入丞相府。延康 `r n("延康（220年三月—十月）是东汉皇帝汉献帝刘协的第六个年号 [1]  ，共计7个月。是东汉的最后一个年号")` 中，为羽林左监^[官名。东汉置。秩六百石，隶属羽林中郎将，主羽林左骑。有丞一人。职掌宿卫宫禁，护从皇帝。]。以有文学，与王象等典集《皇览》。明帝时为中领军尚书，迁征虏将军、东中郎将，使持节都督青、徐诸军事，治下邳。与徐州刺史（邹）〔郑〕岐争屋，引节欲斩岐，为岐所奏，不直 `r n("不正；不公。《资治通鉴·后周太祖广顺二年》：“辛亥，敕：民有诉讼，必先歷县州及观使处决，不直，乃听讼於臺省。”")` ，坐 `r n("定罪")` 免还 `r n("恢复;还原")` 。复为兖州刺史，怏怏不得意。又闻当 `r n("张当")` 转为冀州牧。是时冀州统属镇北，而镇北将军*吕昭才*实仕进 `r n("入仕，做官")` ，本在范后。范谓其妻仲长曰：“我宁作诸卿，向三公长跪耳，不能为吕子展屈也。”其妻曰：“君前在东，坐 `r n("定罪")` 欲擅斩徐州刺史，众人谓君难为作下，今复羞为吕屈，是复难为作上也。”范忿其言触实，乃以刀环撞其腹。妻时怀孕，遂堕胎死 `r co("范不听妻，爽不听范。爽、范一丘之貉也。")` 。范亦竟称疾，不赴冀州。正始中拜大司农。范前在台阁，号为晓事，及为司农，又以清省 `r n("清平省约")` 称。范尝抄撮 `r n("摘录")` 《汉书》中诸杂事，自以意斟酌之，名曰《世要论》。蒋济 `r n("懿心腹")` 为太尉，尝与范会社下，群卿列坐有数人，范怀其所撰，欲以示济，谓济当虚心观之。范出其书以示左右，左右传之示济，济不肯视，范心恨之。因论他事，乃发怒谓济曰：“我祖薄德，公辈何似邪？”济性虽强毅，亦知范（壳）〔刚〕毅，睨而不应，各罢。范于沛郡，仕次在曹真后。于时曹爽辅政，以范乡里老宿，于九卿中特敬之，然不甚亲也。及宣王起兵，闭城门，以范为晓事，乃指召之，欲使领中领军。范欲应召，而其子谏之，以为车驾 `r n("天子出巡时乘坐的马车。后亦用为天子的代称。")` 在外，不如南出。范疑有顷 `r n("有顷。少顷,短时间")` ，儿又促之。范欲去而司农丞吏皆止范。范不从，乃突出至平昌城门，城门已闭。门候司蕃，故范举吏也，范呼之，举手中版 `r n("牍。古时书写用的木简,后也指书籍")` 以示之，矫曰：“有诏召我，卿促开门！”蕃欲求见诏书，范呵之，言“卿非我故吏邪，何以敢尔？”乃开之。范出城，顾谓蕃曰：“太傅图逆，卿从我去。”蕃徒行不能及，遂避侧。范南见爽，劝爽兄弟以天子诣许昌，征四方以自辅。爽疑，羲又无言。范自谓羲曰：“事昭然，卿用读书何为邪？于今日卿等门户倒矣！”俱不言。范又谓羲曰：“卿别营近在阙南，洛阳典农治在城外，呼召如意。今诣许昌，不过中宿，许昌别库，足相被假 `r n("授兵")` ，所忧当在谷食，而大司农印章在我身。”羲兄弟默然不从，（甲）〔中〕夜至五鼓 `r n("古代民间把夜晚分成五个时段，用鼓打更报时，所以叫作五更、五鼓或五夜")` ，爽乃投刀于地，谓诸从驾群臣曰：“我度太傅意，亦不过欲令我兄弟向己 `r n("向己。自相残杀")` 也。我独有以不合于远近耳！”遂进谓帝曰：“陛下作诏免臣官，报皇太后令。”范知爽首免而己必坐唱义 `r n("首倡大义；发动起义")` 也。上乃曰：“老子今兹坐卿兄弟族矣！”爽等既免，帝还宫，遂令范随从。到洛水浮桥北，望见宣王，下车叩头而无言。宣王呼范姓曰：“桓大夫何为尔邪？”车驾入宫，有诏范还复位。范诣阙拜章谢，待报。会司蕃诣鸿胪自首，具说范前临出所道。宣王乃忿然曰：“诬人以反，于法何应？”主者曰：“科律，反受其罪。”乃收范于阙下。时人持范甚急，范谓部官曰：“徐之，我亦义士耳。”遂送廷尉。 `r co("至此爽之爪牙皆陈清矣")` 《世语》曰：初，爽梦二虎衔雷公，雷公若二升碗，放着庭中。爽恶之，以问占者，灵台丞马训曰：“忧兵。”训退，告其妻曰：“爽将以兵亡，不出旬日。”《汉晋春秋》曰：安定皇甫谧 ^[出于安定皇甫氏，曾祖父为东汉太尉皇甫嵩，祖父是灞陵县令皇甫叔献，父皇甫叔侯，举孝廉。出后叔父，徒居新安。少家贫，边耕边读。学习废寝忘食。博览儒家经典百家，人称“书淫”。淡于名利。举孝廉而不行，相国征辟而不就。晋武帝屡下诏敦促，皆固辞，终身不仕，潜心著述。上表，武帝赠书一车。晚年患风痹疾。太康三年（282年）卒，时年六十八。子皇甫童灵、皇甫方回。] 以九年冬梦至洛阳，自庙出，见车骑甚众，以物呈庙云：“诛大将军曹爽。”寤 `r n("睡醒")` 而以告其邑人，邑人曰：“君欲作曹人之梦 ^[前499年，曹国有一名官员梦见庙中有一群人商讨灭亡曹国的事。曹叔振铎在梦中劝阻他们，请求他们等候一个叫公孙彊的人出现才再作商议，得到众人的同意。那官员尝试在曹国寻找公孙彊，但不成功。他临终时吩咐儿子，如果得知有一名叫公孙彊的人执政，便要流亡国外，以免遭祸] 乎？朝无公孙彊如何？且爽兄弟典重兵，又权尚书事，谁敢谋之？”谧曰：“爽无叔振铎之请，苟失天机则离矣，何恃于彊？昔汉之阎显 ^[阎显，(?-125)东汉河南荥阳(今河南荥阳东北)人。安帝元初四年(117)嗣为北宜春侯。妹为安帝皇后。建光元年(121)安帝亲政,封长社侯,诸弟并为卿校,执掌禁兵,干预朝政。与宦官江京等阴谋废皇太子刘保为济阴王。延光四年(125)安帝死,又与阎后定策禁中,立年幼之北乡侯刘懿为帝(即少帝)。太后临朝,遂以车骑将军、仪同三司专断朝政。少帝病死,宦官孙程等十九人拥立刘保为顺帝,遂被杀。] ，倚母后之尊，权国威命，可谓至重矣，阉人十九人一旦尸之，况爽兄弟乎？”《世语》曰：初，爽出，司马**鲁芝**留在府，闻有事，将营骑斫 `r n("zhuó。砍，攻击。")` 津门 `r n("东汉首都洛阳有十二门，南面西头门称津门，一名津阳门")` 出赴爽。爽诛，擢为御史中丞。及爽解印绶，将出，主簿**杨综**止之曰：“公挟主握权，舍此以至东市乎？”爽不从。有司奏综导爽反，宣王曰：“各为其主也。”宥 `r n("宽恕；原谅")` 之，以为尚书郎。芝字世英，扶风人也。以后仕进至特进光禄大夫。综字初伯，后为安东将军司马文王长史。臣松之案：夏侯湛 ^[夏侯湛的祖父夏侯威，是曹魏名将夏侯渊第四子，官至魏国的兖州刺史。父亲夏侯庄，官至淮南郡太守，母亲羊氏是景献皇后羊徽瑜的堂姐。夏侯湛有六弟五妹，其中一个妹妹夏侯光姬为晋元帝司马睿的生母。夏侯湛年幼就已经充满才华，他所写的文章宏富广博，而且善于构建新式词藻，容貌观止优美典雅。《世说新语·容止》曰：“潘安仁，夏侯湛并有美容，喜同行，时人谓之连璧。”] 为芝铭及干宝《晋纪》并云爽既诛，宣王即擢芝为并州刺史，以综为安东参军 ^[官名，“参军事”的省称，为王府、公府、军府、州府的佐吏。东汉将军等统兵出征时，则置参军事，掌佐主帅参谋军事。三国魏置正参军、行参军。西晋诸军府置为属官。晋朝以后的南北朝，凡亲王府、将军府、都督府都设参军，才成为正式官名；有的只称参军，有的加职务名称，如负责谋划的称咨议参军，负责文翰的称记室参军等。隋唐沿袭南北朝时的官制、内府、外府都设录事参军等；刺史僚属多以参军事为名，简称参军；州郡组织除长史、别驾、司马等为刺史的佐官以外，以录事参军为僚属的长官，总理内部一切事务，其下有录事一人；除此之外，分曹办事的有司功参军、司户参军、司田参军、司兵参军、司法参军、司士参军，其下还有不分曹的参军；参军的品级为从七品至从九品不等。宋元不设此官。明清两朝称经历为参军。民国前期将军府设参军，地位在将军之下；民国后期国民政府设参军处。]  。与《世语》不同。②干宝《晋纪》曰：蒋济以曹真之勋力，不宜绝祀 `r n("谓无后嗣，或谓亡国")` ，故以熙 `r n("孙熙")` 为后。济又病其 `r n("懿")` 言之失信于爽，发病卒。
 
 
 ## 曹操
@@ -140,3 +143,4 @@ knitr::include_graphics("images/map-sanguo.jpeg")
 
 ①〔《曹瞒传》曰〕：太祖一名吉利，小字阿瞒。王沈《魏书》曰：其先出于黄帝。当高阳世，陆终之子曰安，是为曹姓。周武王克殷，存先世之后，封曹（快）〔侠〕于邾。春秋之世，与于盟会，逮至战国，为楚所灭。子孙分流，或家于沛。汉高祖之起，曹参以功封平阳侯，世袭爵土，绝而复绍，至今适嗣国于容城。②司马彪《续汉书》曰：腾父节，字元伟，素以仁厚称。邻人有亡豕者，与节豕相类，诣门认之，节不与争。后所亡豕自还其家，豕主人大惭，送所认豕，并辞谢节，节笑而受之，由是乡党贵叹焉。长子伯兴，次子仲兴，次子叔兴。腾字季兴，少除黄门从官。永宁元年，邓太后诏黄门，令选中黄门从官年少温谨者配皇太子书，腾应其选。太子特亲爱腾，饮食赏赐与众有异。顺帝即位，为小黄门，迁至中常侍、大长秋。在省闼三十余年，历事四帝，未尝有过。好进达贤能，终无所毁伤。其所称荐，若陈留虞放、边韶、南阳延固、张温、弘农张奂、颍川堂溪典等，皆致位公卿，而不伐其善。蜀郡太守因计吏修敬于腾，益州刺史种暠于函谷关搜得其笺，上太守，并奏腾内臣外交，所不当为，请免官治罪。帝曰：“笺自外来，腾书不出，非其罪也。”乃寝暠奏。腾不以介意，常称叹暠，以为嵩得事上之节。暠后为司徒，语人曰：“今日为公，乃曹常侍恩也。”腾之行事，皆此类也。桓帝即位，以腾先帝旧臣，忠孝彰著，封费亭侯，加位特进。太和三年，追尊腾曰高皇帝。③《续汉书》曰：嵩字巨高。质性敦慎，所在忠孝。为司隶校尉，灵帝擢拜大司农、大鸿胪，代崔烈为太尉。黄初元年，追尊嵩曰太皇帝。吴人作《曹瞒传》及郭颁《世语》并云：嵩，夏侯氏之子，夏侯惇之叔父。太祖于惇为从父兄弟。
 
+`r co("堂而皇之用盗狗，霸气。[《三国志》](#三国志-曹爽-爽等伏诛)")` 
