--- a/09-wei-01-emperor.Rmd
+++ b/09-wei-01-emperor.Rmd
@@ -2,7 +2,7 @@
 
 ## 曹操
 
-### 三国志·魏书一·武帝纪
+### 《三国志·魏书一·武帝纪》
 
 太祖武皇帝，沛国谯人也，姓曹，讳操，字孟德，汉相国参 `r n("曹参")` 之后。①桓帝世，曹腾为中常侍、大长秋，封费亭侯。②养子嵩嗣，官至太尉，莫能审其生出本末。③嵩生太祖。
 
