--- a/09-wei-02-official.Rmd
+++ b/09-wei-02-official.Rmd
@@ -3,14 +3,14 @@
 
 ## 司马防 {#simafang}
 
-### 三国志·魏书一·武帝纪
+### 《三国志·魏书一·武帝纪》
 
 《曹瞒传》曰：为尚书右丞司马建公`r n("司马防")`所举。及公为王，召建公到邺，与欢饮，谓建公曰："孤今日可复作尉否？"建公曰："昔举大王时，适可作尉耳。"王大笑。建公名防，司马宣王之父。臣松之案司马彪《序传》，建公不为右丞，疑此`r n("这件事")`不然，而王隐《晋书》云 `r n("自《晋书·赵王司马伦传》房玄龄")`赵王篡位，欲尊祖 `r n("司马防")`为帝，博士马平议 `r n("马平|马平议？")`称京兆府君昔举魏武帝为北部尉，贼不犯界，如此则为有征 `r n("证明")`。
 
 
 ## 曹爽
 
-### 三国志·魏书九·曹爽传
+### 《三国志·魏书九·曹爽传》
 
 爽字昭伯，少以 `r n("因为")` 宗室谨重 `r n("谨慎稳重[?]")` ，明帝 `r n("魏明帝曹叡（206年（存疑）—239年1月22日），字元仲，沛国谯县（今安徽省亳州市）人。曹魏第二位皇帝。魏文帝曹丕长子，母为文昭甄皇后。")` 在东宫，甚亲爱之。及即位，为散骑侍郎 `r n("入则规谏过失，备皇帝顾问，出则骑马散从")` ^[三国魏吴皆置，属散骑省，员额四人，五品。掌侍从左右，顾问应对、规劝得失；与散骑常侍等共平尚书奏事。西晋置，东晋罢。南朝复置，属集书省，掌文学侍从，收纳章奏，劝谏纠劾。北朝也置，且兼修国史。隋初属门下省，掌值班陪从；炀帝废。唐初复置，为加官，后改为文散官。参看“散骑省”、“门下省”、“散骑常侍”条。] ，累迁城门校尉 `r n("职掌京师城门守卫")` ^[城门校尉，它于汉武帝时初置，在汉代是一种不可或缺的军事力量，职掌京师城门守卫，东汉光武帝沿置之。城门校尉、执金吾与北军中候之间相互牵制，互不统属，共同组成了东汉中央宿卫系统中的城卫军。隋城门局属于门下省，设校尉二人，隋炀帝改校尉为城门郎。] ，加散骑常侍^[三国魏文帝黄初 (220—226) 初年置散骑，合于中常侍，谓之散骑常侍。西晋沿置，员四人，位比侍中，三品，秩比二千石，为门下重职，散骑省长官。职掌侍从皇帝左右，谏诤得失，顾问应对，与侍中等共平尚书奏事，有异议得驳奏。亦常用作宰相、诸公等加官，得入宫禁议政。至东晋，夺中书出令之权，参掌机密，选望甚重，职任比于侍中。]
 ，转武卫将军 `r n("掌宿卫禁军，权任很重")` ，宠待有殊。帝寝疾，乃引爽入卧内，拜大将军，假节钺，都督中外诸军事，录尚书事^[初为职衔名，始于东汉。当时政令、政务总于尚书台，太傅、太尉、大将军等加此名义始得总知国事，综理政务，成为真宰相。魏晋南北朝多以公卿权重者居之，总领尚书省政务，凡重号将军、刺史，皆得命曹授用，位在三公上。或以二人以上并录，参录，又有录尚书六条、关尚书七条事等名义。南朝宋孝武帝孝建(454—456)中，不欲威权外假，遂省。其后置省无常。南齐始单拜，成为正式官号，为尚书省长官。梁、陈以其威权过重，常缺不授。北魏、北齐亦定为官号，为尚书省长官，尚书令、仆射为其副贰，职权甚重，隋朝废。辽初曾拟授重臣]
@@ -56,4 +56,30 @@ knitr::include_graphics("images/map-sanguo.jpeg")
 
 ①《魏略》曰：**邓飏**字玄茂，邓禹后也。少得士名于京师。明帝时为尚书郎，除洛阳令，坐事免，拜中郎，又入兼中书郎。初，飏与李胜等为浮华友，及在中书，浮华事发，被斥出，遂不复用。`r co("此乃少帝病弊")` 正始初，乃出为颍川太守，转大将军长史，迁侍中尚书。飏为人好货 `r n("贪爱财物")` ，前在内职，许臧艾授以显官，艾以父妾 `r co("小妈亦为财物，不伦。收之，不齿")` 与飏，故京师为之语曰：“以官易妇邓玄茂。”每所荐达，多如此比。故何晏选举不得人，颇由飏之不公忠，遂同其罪，盖由交友非（奇）〔其〕才。（魏略曰）**丁谧**字彦靖。父*斐*字文侯。初，斐随太祖，太祖以斐乡里，特饶爱之。斐性好货，数请求犯法，辄得原宥 `r n("原谅宽恕")` 。为典军校尉，总摄内外，每所陈说，多见从之 `r co("曹操信之，盖因其有才能")` 。建安末，从太祖征吴。斐随行，自以家牛羸困 `r n("疲惫，瘦弱困乏")` ，乃私易官牛，为人所白，被收送狱，夺官。其后太祖问斐曰：“文侯，印绶所在？”斐亦知见戏，对曰：“以易饼耳。”太祖笑，顾谓左右曰：“东曹 `r fn("①官署名。西汉丞相府所属诸曹之一。东汉时三公府亦置。据《后汉书·百官志》，太尉所属东曹主二千石长吏迁除选举及军吏。领其事者为东曹掾，秩比四百石。汉末曹操于相府亦置东、西曹，皆典选举。东曹典府外官吏。三国魏大将军、丞相(相国)，蜀丞相、大司马及吴车骑将军等并置。西晋初，诸公及开府位从公者皆置，位在西曹下，赵王伦为相国时增置属吏。西晋末，丞相府一度置参军主东曹事。东晋省。十六国又置，南朝宋、齐亦置。梁于诸公府置，以督护主之。②部落名。十六国前秦建元三年(367)匈奴右贤王死，秦分其部落为二，使其二子分统之，号东、西曹。")` 毛掾数白此家，欲令我重治，我非不知此人不清，良 `r n("的确，诚然")` 有以 `r n("所以，原因")` 也。我之有斐，譬如人家有盗狗而善捕鼠，盗虽有小损，而完我囊贮 `r n("贮于袋中的物品")`  `r co("曹操视斐为盗狗，斐亦知也，反以为荣。一主一狗，其乐融融")` 。”遂复斐官，听用如初。后数岁，病亡。谧少不肯交游，但博观书传。为人沉毅，颇有才略。太和 `r n("三国魏明帝年号(227—233)。凡七年。")` 中，常住邺，借人空屋，居其中。而诸王亦欲借之，不知谧已得，直开门入。谧望见王，交脚卧而不起，而呼其奴客曰：“此何等人？促呵使去。”王怒其无礼，还具上言。明帝收谧，系邺狱，以其功臣子，原 `r n("宽恕，赦免")` 出。后帝闻其有父风 `r co("可见斐之才略")` ，召拜度支郎中 `r fn("官名，也称度支郎。魏晋南北朝尚书省（台）置尚书曹，度支郎为曹长官，掌贡税租赋的统计、调拨、支出等。至唐朝，只称度支郎中而不再称度支郎，掌全国租税物产，水陆道途之利，每年计算收入与支出。宋朝也置，掌计算军费，根据全国租税贡赋的收入而制订开支计划。清朝末年度支部也置度支郎中。见《旧唐书·职官二·度支郎中》、《新唐书·百官一·户部》、《宋史·职官三·度支郎中》、《清史稿·职官六·度支郎中》。")` 。曹爽宿与相亲，时爽为武卫将军，数为帝说其可大用。会帝崩，爽辅政，乃拔谧为散骑常侍，遂转尚书。谧为人外似疏略 `r n("远大的谋略，或指粗略;粗心大意")` ，而内多忌。其在台阁 `r fn("①东汉至隋、唐对尚书台 (省) 的别称。《后汉书 ·仲长统传》： “虽置三公，事归台阁。”李贤注： “台阁谓尚书也。”②指御史台、秘书监。《三国志·王肃传》裴松之注引《魏略》： “兰台为外台，秘书为内阁，台阁一也。”③北宋对御史台官、诸阁职的简称。")` ，数有所弹驳，台中患之，事不得行。又其意轻贵，多所忽略，虽与何晏、邓飏等同位，而皆少 `r n("轻视,看不起")` 之，唯以势屈于爽。爽亦敬之，言无不从。故于时谤书，谓“台中有三狗，二狗崖柴 `r n("形容张口欲咬人之状")` 不可当，一狗凭 `r co("倚靠爽")` 默作疽囊 `r n("毒疮植根处，常用来暗喻群恶聚集之所")` ”。三狗，谓何、邓、丁也。[默者，爽小字也]{.underline}。其意言三狗皆欲啮人，而谧尤甚也。奏使郭太后出居别宫 `r co("郭太后手段非常")` `r fn("黄初二年（221年），曹丕遣使赐死在邺城的甄夫人，这是因郭贵嫔受宠所致。《资治通鉴》《魏略》以及《汉晋春秋》记载，郭氏以谗言谮害甄氏，曹丕遂大怒赐死")` ，及遣乐安王使北诣邺，又遣*文钦*令还淮南，皆谧之计。`r co("才略只作阴谋")` 司马宣王由是特深恨之。**毕轨**字昭先。父字子礼，建安中为典农校尉。轨以才能，少有名声。明帝在东宫时，轨在文学中 `r fn("官名，文学掾、文学史及太子文学的简称。汉朝州郡和王国皆置，以通晓经书者担任，掌管学校教育，教授诸生，或掌典章故事，备顾问侍从。三国魏置太子文学，诸王和侯国也置。晋朝诸王及世子置。南朝宋、齐王国置，梁、陈皇弟、皇子府置，北魏、北齐皇子置。隋、唐亲王府置，掌校勘典籍、侍从文章。唐德宗时改诸州经学博士为文学，掌以五经教授诸生，见《通典·职官十二》、《晋书·职官志》、《新唐书·百官四下》。")` 。黄初末 `r co("曹丕即位")` ，出为长史。明帝即位，入为黄门郎，子尚 `r n("娶帝王之女为妻")` 公主，居处殷富。迁并州刺史。其在并州，名为骄豪。时杂虏数为暴，害吏民，轨辄出军击鲜卑轲比能 `r fn("轲比能“勇健，断法平端，不贪财物”，众人推举他为大人（首领）。他的部落接近汉的北方边境，自从袁绍据河北后，有不少汉人逃到塞外投靠轲比能，他们教晓鲜卑人“作兵器铠楯”，又教授文字。轲比能仿效中原方式管理部众，“出入弋猎，建立旌麾，以鼓节为进退”。他曾经协助曹操敉平地方叛乱，也曾经侵扰汉境，被曹彰打得大败，退出塞外。轲比能后来恢复向中原政权贡献。220年，轲比能遣使献马，曹丕立他为附义王。其后轲比能与东部鲜卑大人素利及步度根争战。224年，轲比能又进攻素利，魏国出兵干预，打败了轲比能的部下琐奴，轲比能于是致书向魏解释。此后轲比能的部众变得强盛，“控弦十余万骑”。他每次掠得财物，均与众平分，“终无所私，故得众死力，余部大人皆敬惮之”，然犹未能及得上以前檀石槐时期的强大。228年，其女婿郁筑鞬遭田豫攻击，派三万骑兵相救，经阎志劝解，带兵离去。233年，轲比能引诱步度根结和亲，于是步度根归附轲比能，侵袭并州。后来轲比能杀了步度根。235年，魏幽州刺史王雄派刺客韩龙杀死轲比能，立其弟为首领。《晋书》称轲比能之后为契丹。")` ，失利。中护军 `r fn("官名。东汉置，掌军中参谋、协调诸部。《后汉书 ·班彪列传下》： 明帝永元(58—75)初，“大将军窦宪出征匈奴，以(班)固为中护军，与参谋。”献帝建安十二年(207)曹操改护军置。魏沿置，四品，资重者可迁护军将军，掌武官选举，与中领军同掌禁军，出征则督护诸将; 隶中领军 (领军将军)。入晋则不隶领军，亦不典武选，升三品，自领营兵; 东晋元帝永昌元年 (322) 省并入领军，明帝太宁二年 (324) 复分置，掌督护京师以外地方诸军。属官有长史、司马、功曹、主薄、五官，受命出征则置参军。南朝沿置，宋三品，梁十四班，陈三品、中二千石。北魏则侍臣带护军始加中字，孝文帝太和十七年 (493)定为二品中，二十三年定为三品。北齐三品，管四中关津，舆驾出则护驾，统东西南北四中郎将府及诸关尉、津尉，属官有长史、司马、功曹、五官、主簿、录事及诸曹参军。唐德宗贞元十二年 (796) 亦置，以宦官充任，为左右神威军监军使加号，以示尊宠。")` 蒋济表曰：“毕轨前失，既往不咎，但恐是后难可以再。凡人材有长短，不可强成。轨文雅智意，自为美器。今失并州，换置他州，若入居显职，不毁其德，于国事实善。此安危之要，唯圣恩察之。”至正始中，入为中护军，转侍中尚书，迁司隶校尉。素与曹爽善，每言于爽，多见从之。**李胜**字公昭。父*休*字子朗，有智略。张鲁 `r fn("字公祺，沛国丰(今属江苏)人。祖父张陵创立五斗米道。他初被益州牧刘焉授以督义司马，奉命与张修进攻汉中。后杀张修并收编其众，占据汉中。推行五斗米道，实行政教合一。境内安定，生产发展，户口增加。建安二十年(215)遣弟张卫迎战曹操于阳平关，兵败，封府库而奔巴中，不久降操，拜镇南将军，封阆中侯。卒后谥原侯。")` 前为镇北将军，休为司马，家南郑。时汉中有甘露降，子朗见张鲁精兵数万人，有四塞之固，遂建言赤气久衰，黄家当兴，欲鲁举号，鲁不听。会鲁破，太祖以其劝鲁内附，赐爵关内侯，署 `r n("代理、暂任或试充官职")` 散官骑从，诣邺。至黄初中，仕历上党、巨鹿二郡太守，后以年老还，拜议郎 `r fn("汉 代设置；为光禄勋所属郎官之一，掌顾问应对，无常事。 汉 秩比六百石。多征贤良方正之士任之。 晋 以后废")` 。胜少游京师，雅有才智，与曹爽善。明帝禁浮华，而人白胜堂有四窗八达，各有主名。用是被收，以其所连引者多，故得原，禁锢 `r n("监禁；关押")` 数岁 `r co("得原后为何被禁锢数岁")` 。帝崩，曹爽辅政，胜为洛阳令。夏侯玄为征西将军，以胜为长史。玄亦宿与胜厚。骆谷之役，议从胜出，由是司马宣王不悦于胜。累迁荥阳太守、河南尹。胜前后所宰守，未尝不称职，为尹岁余，厅事前屠苏 `r n("即罘罳 fú sī。一种屏风，设在门外")` 坏，令人更治之，小材一枚激堕，正挝 `r n("zhuā。敲打,击")` 受符吏 `r n("符官。道教指守护符箓的神官")` 石虎头，断之。后旬日，迁为荆州刺史，未及之官而败也。**桓范**字元则，世为冠族 `r n("显贵的豪门世族")` 。建安末，入丞相府。延康 `r n("延康（220年三月—十月）是东汉皇帝汉献帝刘协的第六个年号 [1]  ，共计7个月。是东汉的最后一个年号")` 中，为羽林左监^[官名。东汉置。秩六百石，隶属羽林中郎将，主羽林左骑。有丞一人。职掌宿卫宫禁，护从皇帝。]。以有文学，与王象等典集《皇览》。明帝时为中领军尚书，迁征虏将军、东中郎将，使持节都督青、徐诸军事，治下邳。与徐州刺史（邹）〔郑〕岐争屋，引节欲斩岐，为岐所奏，不直 `r n("不正；不公。《资治通鉴·后周太祖广顺二年》：“辛亥，敕：民有诉讼，必先歷县州及观使处决，不直，乃听讼於臺省。”")` ，坐 `r n("定罪")` 免还 `r n("恢复;还原")` 。复为兖州刺史，怏怏不得意。又闻当 `r n("张当")` 转为冀州牧。是时冀州统属镇北，而镇北将军*吕昭才*实仕进 `r n("入仕，做官")` ，本在范后。范谓其妻仲长曰：“我宁作诸卿，向三公长跪耳，不能为吕子展屈也。”其妻曰：“君前在东，坐 `r n("定罪")` 欲擅斩徐州刺史，众人谓君难为作下，今复羞为吕屈，是复难为作上也。”范忿其言触实，乃以刀环撞其腹。妻时怀孕，遂堕胎死 `r co("范不听妻，爽不听范。爽、范一丘之貉也。")` 。范亦竟称疾，不赴冀州。正始中拜大司农。范前在台阁，号为晓事，及为司农，又以清省 `r n("清平省约")` 称。范尝抄撮 `r n("摘录")` 《汉书》中诸杂事，自以意斟酌之，名曰《世要论》。蒋济 `r n("懿心腹")` 为太尉，尝与范会社下，群卿列坐有数人，范怀其所撰，欲以示济，谓济当虚心观之。范出其书以示左右，左右传之示济，济不肯视，范心恨之。因论他事，乃发怒谓济曰：“我祖薄德，公辈何似邪？”济性虽强毅，亦知范（壳）〔刚〕毅，睨而不应，各罢。范于沛郡，仕次在曹真后。于时曹爽辅政，以范乡里老宿，于九卿中特敬之，然不甚亲也。及宣王起兵，闭城门，以范为晓事，乃指召之，欲使领中领军。范欲应召，而其子谏之，以为车驾 `r n("天子出巡时乘坐的马车。后亦用为天子的代称。")` 在外，不如南出。范疑有顷 `r n("有顷。少顷,短时间")` ，儿又促之。范欲去而司农丞吏皆止范。范不从，乃突出至平昌城门，城门已闭。门候司蕃，故范举吏也，范呼之，举手中版 `r n("牍。古时书写用的木简,后也指书籍")` 以示之，矫曰：“有诏召我，卿促开门！”蕃欲求见诏书，范呵之，言“卿非我故吏邪，何以敢尔？”乃开之。范出城，顾谓蕃曰：“太傅图逆，卿从我去。”蕃徒行不能及，遂避侧。范南见爽，劝爽兄弟以天子诣许昌，征四方以自辅。爽疑，羲又无言。范自谓羲曰：“事昭然，卿用读书何为邪？于今日卿等门户倒矣！”俱不言。范又谓羲曰：“卿别营近在阙南，洛阳典农治在城外，呼召如意。今诣许昌，不过中宿，许昌别库，足相被假 `r n("授兵")` ，所忧当在谷食，而大司农印章在我身。”羲兄弟默然不从，（甲）〔中〕夜至五鼓 `r n("古代民间把夜晚分成五个时段，用鼓打更报时，所以叫作五更、五鼓或五夜")` ，爽乃投刀于地，谓诸从驾群臣曰：“我度太傅意，亦不过欲令我兄弟向己 `r n("向己。自相残杀")` 也。我独有以不合于远近耳！”遂进谓帝曰：“陛下作诏免臣官，报皇太后令。”范知爽首免而己必坐唱义 `r n("首倡大义；发动起义")` 也。上乃曰：“老子今兹坐卿兄弟族矣！”爽等既免，帝还宫，遂令范随从。到洛水浮桥北，望见宣王，下车叩头而无言。宣王呼范姓曰：“桓大夫何为尔邪？”车驾入宫，有诏范还复位。范诣阙拜章谢，待报。会司蕃诣鸿胪自首，具说范前临出所道。宣王乃忿然曰：“诬人以反，于法何应？”主者曰：“科律，反受其罪。”乃收范于阙下。时人持范甚急，范谓部官曰：“徐之，我亦义士耳。”遂送廷尉。 `r co("至此爽之爪牙皆陈清矣")` 《世语》曰：初，爽梦二虎衔雷公，雷公若二升碗，放着庭中。爽恶之，以问占者，灵台丞马训曰：“忧兵。”训退，告其妻曰：“爽将以兵亡，不出旬日。”《汉晋春秋》曰：安定皇甫谧 ^[出于安定皇甫氏，曾祖父为东汉太尉皇甫嵩，祖父是灞陵县令皇甫叔献，父皇甫叔侯，举孝廉。出后叔父，徒居新安。少家贫，边耕边读。学习废寝忘食。博览儒家经典百家，人称“书淫”。淡于名利。举孝廉而不行，相国征辟而不就。晋武帝屡下诏敦促，皆固辞，终身不仕，潜心著述。上表，武帝赠书一车。晚年患风痹疾。太康三年（282年）卒，时年六十八。子皇甫童灵、皇甫方回。] 以九年冬梦至洛阳，自庙出，见车骑甚众，以物呈庙云：“诛大将军曹爽。”寤 `r n("睡醒")` 而以告其邑人，邑人曰：“君欲作曹人之梦 ^[前499年，曹国有一名官员梦见庙中有一群人商讨灭亡曹国的事。曹叔振铎在梦中劝阻他们，请求他们等候一个叫公孙彊的人出现才再作商议，得到众人的同意。那官员尝试在曹国寻找公孙彊，但不成功。他临终时吩咐儿子，如果得知有一名叫公孙彊的人执政，便要流亡国外，以免遭祸] 乎？朝无公孙彊如何？且爽兄弟典重兵，又权尚书事，谁敢谋之？”谧曰：“爽无叔振铎之请，苟失天机则离矣，何恃于彊？昔汉之阎显 ^[阎显，(?-125)东汉河南荥阳(今河南荥阳东北)人。安帝元初四年(117)嗣为北宜春侯。妹为安帝皇后。建光元年(121)安帝亲政,封长社侯,诸弟并为卿校,执掌禁兵,干预朝政。与宦官江京等阴谋废皇太子刘保为济阴王。延光四年(125)安帝死,又与阎后定策禁中,立年幼之北乡侯刘懿为帝(即少帝)。太后临朝,遂以车骑将军、仪同三司专断朝政。少帝病死,宦官孙程等十九人拥立刘保为顺帝,遂被杀。] ，倚母后之尊，权国威命，可谓至重矣，阉人十九人一旦尸之，况爽兄弟乎？”《世语》曰：初，爽出，司马**鲁芝**留在府，闻有事，将营骑斫 `r n("zhuó。砍，攻击。")` 津门 `r n("东汉首都洛阳有十二门，南面西头门称津门，一名津阳门")` 出赴爽。爽诛，擢为御史中丞。及爽解印绶，将出，主簿**杨综**止之曰：“公挟主握权，舍此以至东市乎？”爽不从。有司奏综导爽反，宣王曰：“各为其主也。”宥 `r n("宽恕；原谅")` 之，以为尚书郎。芝字世英，扶风人也。以后仕进至特进光禄大夫。综字初伯，后为安东将军司马文王长史。臣松之案：夏侯湛 ^[夏侯湛的祖父夏侯威，是曹魏名将夏侯渊第四子，官至魏国的兖州刺史。父亲夏侯庄，官至淮南郡太守，母亲羊氏是景献皇后羊徽瑜的堂姐。夏侯湛有六弟五妹，其中一个妹妹夏侯光姬为晋元帝司马睿的生母。夏侯湛年幼就已经充满才华，他所写的文章宏富广博，而且善于构建新式词藻，容貌观止优美典雅。《世说新语·容止》曰：“潘安仁，夏侯湛并有美容，喜同行，时人谓之连璧。”] 为芝铭及干宝《晋纪》并云爽既诛，宣王即擢芝为并州刺史，以综为安东参军 ^[官名，“参军事”的省称，为王府、公府、军府、州府的佐吏。东汉将军等统兵出征时，则置参军事，掌佐主帅参谋军事。三国魏置正参军、行参军。西晋诸军府置为属官。晋朝以后的南北朝，凡亲王府、将军府、都督府都设参军，才成为正式官名；有的只称参军，有的加职务名称，如负责谋划的称咨议参军，负责文翰的称记室参军等。隋唐沿袭南北朝时的官制、内府、外府都设录事参军等；刺史僚属多以参军事为名，简称参军；州郡组织除长史、别驾、司马等为刺史的佐官以外，以录事参军为僚属的长官，总理内部一切事务，其下有录事一人；除此之外，分曹办事的有司功参军、司户参军、司田参军、司兵参军、司法参军、司士参军，其下还有不分曹的参军；参军的品级为从七品至从九品不等。宋元不设此官。明清两朝称经历为参军。民国前期将军府设参军，地位在将军之下；民国后期国民政府设参军处。]  。与《世语》不同。②干宝《晋纪》曰：蒋济以曹真之勋力，不宜绝祀 `r n("谓无后嗣，或谓亡国")` ，故以熙 `r n("孙熙")` 为后。济又病其 `r n("懿")` 言之失信于爽，发病卒。
 
+
+## 蒋济
+
+### 《三国志·魏书十四·蒋济传》
+
+蒋济字子通，楚国平阿人也。仕郡计吏、州别驾。建安十三年，孙权率众围合肥。时大军征荆州，遇疾疫，唯遣将军张喜单将千骑，过领汝南兵以解围，颇复疾疫。济乃密白刺史伪得喜书，云步骑四万已到雩娄，遣主簿迎喜。三部使赍书语城中守将，一部得入城，二部为贼所得。权信之，遽烧围走，城用得全。明年使于谯，太祖问济曰：“昔孤与袁本初对官渡，徙燕、白马民，民不得走，贼亦不敢钞。今欲徙淮南民，何如？”济对曰：“是时兵弱贼强，不徙必失之。自破袁绍，北拔柳城，南向江、汉，荆州交臂，威震天下，民无他志。然百姓怀土，实不乐徙，惧必不安。”太祖不从，而江、淮间十余万众，皆惊走吴。后济使诣邺，太祖迎见大笑曰：“本但欲使避贼，乃更驱尽之。”拜济丹阳太守。大军南征还，以温恢为扬州刺史，济为别驾。令曰：“季子为臣，吴宜有君。今君还州，吾无忧矣。”民有诬告济为谋叛主率者，太祖闻之，指（有）〔前〕令与左将军于禁、沛相封仁等曰：“蒋济宁有此事！有此事，吾为不知人也。此必愚民乐乱，妄引之耳。”促理出之。辟为丞相主簿西曹属。令曰：“舜举皋陶，不仁者远；臧否得中，望于贤属矣。”关羽围樊、襄阳。太祖以汉帝在许，近贼，欲徙都。司马宣王及济说太祖曰：“于禁等为水所没，非战攻之失，于国家大计未足有损。刘备、孙权，外亲内疏，关羽得志，权必不愿也。可遣人劝蹑其后，许割江南以封权，则樊围自解。”太祖如其言。权闻之，即引兵西袭公安、江陵。羽遂见禽。
+
+#### 文帝
+
+文帝即王位，转为相国长史。及践阼，出为东中郎将。济请留，诏曰：“高祖歌曰‘安得猛士守四方’！天下未宁，要须良臣以镇边境。如其无事，乃还鸣玉，未为后也。”济上《万机论》，帝善之。人为散骑常侍。时有诏，诏征南将军夏侯尚曰：“卿腹心重将，（时）〔特〕当任使。恩施足死，惠爱可怀。作威作福，杀人活人。”尚以示济。济既至，帝问曰：“卿所闻见天下风教何如？”济对曰：“未有他善，但见亡国之语耳。”帝忿然作色而问其故，济具以答，因曰：“夫‘作威作福’，《书》之明诫。‘天子无戏言’，古人所慎。惟陛下察之！”于是帝意解，遣追取前诏。黄初三年，与大司马曹仁征吴，济别袭羡溪。仁欲攻濡须洲中，济曰：“贼据西岸，列船上流，而兵入洲中，是为自内地狱，危亡之道也。”仁不从，果败。仁薨，复以济为东中郎将，代领其兵。诏曰：“卿兼资文武，志节〔慷慨〕，常有超越江湖吞吴会之志，故复授将率之任。”顷之，征为尚书。车驾幸广陵，济表水道难通，又上《三州论》以讽帝。帝不从，于是战船数千皆滞不得行。议者欲就留兵屯田，济以为东近湖，北临淮，若水盛时，贼易为寇，不可安屯。帝从之，车驾即发。还到精湖，水稍尽，尽留船付济。船本历适数百里中，济更凿地作四五道，蹴船令聚。豫作土豚遏断湖水，皆引后船，一时开遏入淮中。帝还洛阳，谓济曰：“事不可不晓。吾前决谓分半烧船于山阳池中，卿于后致之，略与吾俱至谯。又每得所陈，实入吾意。自今讨贼计画，善思论之。”
+
+#### 明帝
+
+明帝即位，赐爵关内侯。大司马曹休帅军向皖，济表以为“深入虏地，与权精兵对，而朱然等在上流，乘休后，臣未见其利也”。军至皖，吴出兵安陆，济又上疏曰：“今贼示形于西，必欲并兵图东，宜急诏诸军往救之。”会休军已败，尽弃器仗辎重退还。吴欲塞夹石，遇救兵至，是以官军得不没。迁为中护军。时中书监、令号为专任，济上疏曰：“大臣太重者国危，左右太亲者身蔽，古之至戒也。往者大臣秉事，外内扇动。陛下卓然自览万机，莫不祗肃。夫大臣非不忠也，然威权在下，则众心慢上，势之常也。陛下既已察之于大臣，愿无忘于左右。左右忠正远虑，未必贤于大臣，至于便辟取合，或能工之。今外所言，辄云中书，虽使恭慎不敢外交，但有此名，犹惑世俗。况实握事要，日在目前，傥因疲倦之间有所割制，众臣见其能推移于事，即亦因时而向之。一有此端，因当内设自完，以此众语，私招所交，为之内援。若此，臧否毁誉，必有所兴；功负赏罚，必有所易。直道而上者或壅，曲附左右者反达。因微而入，缘形而出，意所狎信，不复猜觉。此宜圣智所当早闻，外以经意，则形际自见。或恐朝臣畏言不合而受左右之怨，莫适以闻。臣窃亮陛下潜神默思，公听并观，若事有未尽于理而物有未周于用，将改曲易调，远与黄、唐角功，近昭武、文之迹，岂近习而已哉！然人君犹不可悉天下事以适己明，当有所付。三官任一臣，非周公旦之忠，又非管夷吾之公，则有弄机败官之弊。当今柱石之士虽少，至于行称一州，智效一官，忠信竭命，各奉其职，可并驱策，不使圣明之朝有专吏之名也。”诏曰：“夫骨鲠之臣，人主之所仗也。济才兼文武，服勤尽节，每军国大事，辄有奏议，忠诚奋发，吾甚壮之。”就迁为护军将军，加散骑常侍。①
+
+①司马彪《战略》曰：太和六年，明帝遣平州刺史田豫乘海渡，幽州刺史王雄陆道，并攻辽东。蒋济谏曰：“凡非相吞之国，不侵叛之臣，不宜轻伐。伐之而不制，是驱使为贼。故曰‘虎狼当路，不治狐狸。先除大害，小害自已’。今海表之地，累世委质，岁选计考，不乏职贡。议者先之，正使一举便克，得其民不足益国，得其财不足为富。傥不如意，是为结怨失信也。”帝不听，豫行竟无成而还。
+
+#### 景初
+
+景初中，外勤征役，内务宫室，怨旷者多，而年谷饥俭。济上疏曰：“陛下方当恢崇前绪，光济遗业，诚未得高枕而治也。今虽有十二州，至于民数，不过汉时一大郡。二贼未诛，宿兵边陲，且耕且战，怨旷积年。宗庙宫室，百事草创，农桑者少，衣食者多，今其所急，唯当息耗百姓，不至甚弊。弊攰之民，傥有水旱，百万之众，不为国用。凡使民心须农隙，不夺其时。夫欲大兴功之君，先料其民力而燠休之。句践养胎以待用，昭王恤病以雪仇，故能以弱燕服强齐，赢越灭劲吴。今二敌不攻不灭，不事即侵，当身不除，百世之责也。以陛下圣明神武之略，舍其缓者，专心讨贼，臣以为无难矣。又欢娱之耽，害于精爽。神太用则竭，形太劳则弊。愿大简贤妙，足以充‘百斯男’者。其冗散未齿，且悉分出，务在清静。”诏曰：“微护军，吾弗闻斯言也。”①
+
+①《汉晋春秋》曰：公孙渊闻魏将来讨，复称臣于孙权，乞兵自救。帝问济：“孙权其救辽东乎？”济曰：“彼知官备以固，利不可得，深入则非力所能，浅入则劳而无获。权虽子弟在危，犹将不动，况异域之人，兼以往者之辱乎！今所以外扬此声者，谲其行人疑于我，我之不克，冀折后事已耳。然沓渚之间，去渊尚远，若大军相持，事不速决，则权之浅规，或能轻兵掩袭，未可测也。”
+
+#### 齐王
+
+齐王即位，徙为领军将军，进爵昌陵亭侯，①迁太尉。初，侍中高堂隆论郊祀事，以魏为舜后，推舜配天。济以为舜本姓妫，其苗曰田，非曹之先，著文以追诘隆。②是时，曹爽专政，丁谧，邓飏等轻改法度。会有日蚀变，诏群臣问其得失，济上疏曰：“昔大舜佐治，戒在比周；周公辅政，慎于其朋；齐侯问灾，晏婴对以布惠；鲁君问异，臧孙答以缓役。应天塞变，乃实人事。今二贼未灭，将士暴露已数十年，男女怨旷，百姓贫苦。夫为国法度，惟命世大才，乃能张其纲维以垂于后，岂中下之吏所宜改易哉？终无益于治，适足伤民，望宜使文武之臣各守其职，率以清平，则和气祥瑞可感而致也。”以随太傅司马宣王屯洛水浮桥，诛曹爽等，进封都乡侯，邑七百户。济上疏曰：“臣忝宠上司，而爽敢苞藏祸心，此臣之无任也。太傅奋独断之策，陛下明其忠节，罪人伏诛，社稷之福也。夫封宠庆赏，必加有功。今论谋则臣不先知，语战则非臣所率，而上失其制，下受其弊。臣备宰司，民所具瞻，诚恐冒赏之渐自此而兴，推让之风由此而废。”固辞，不许。③是岁薨，谥曰景侯。④子秀嗣。秀薨，子凯嗣。咸熙中，开建五等，以济著勋前朝，改封凯为下蔡子。
 
