Start reading about `蒋济`

--- a/09-wei-02-official.Rmd
+++ b/09-wei-02-official.Rmd
@@ -59,13 +59,19 @@ knitr::include_graphics("images/map-sanguo.jpeg")
 
 ## 蒋济
 
-### 《三国志·魏书十四·蒋济传》
+### 《三国志·魏书十四·蒋济传》{#三国志-蒋济}
 
-蒋济字子通，楚国平阿人也。仕郡计吏、州别驾。建安十三年，孙权率众围合肥。时大军征荆州，遇疾疫，唯遣将军张喜单将千骑，过领汝南兵以解围，颇复疾疫。济乃密白刺史伪得喜书，云步骑四万已到雩娄，遣主簿迎喜。三部使赍书语城中守将，一部得入城，二部为贼所得。权信之，遽烧围走，城用得全。明年使于谯，太祖问济曰：“昔孤与袁本初对官渡，徙燕、白马民，民不得走，贼亦不敢钞。今欲徙淮南民，何如？”济对曰：“是时兵弱贼强，不徙必失之。自破袁绍，北拔柳城，南向江、汉，荆州交臂，威震天下，民无他志。然百姓怀土，实不乐徙，惧必不安。”太祖不从，而江、淮间十余万众，皆惊走吴。后济使诣邺，太祖迎见大笑曰：“本但欲使避贼，乃更驱尽之。”拜济丹阳太守。大军南征还，以温恢为扬州刺史，济为别驾。令曰：“季子为臣，吴宜有君。今君还州，吾无忧矣。”民有诬告济为谋叛主率者，太祖闻之，指（有）〔前〕令与左将军于禁、沛相封仁等曰：“蒋济宁有此事！有此事，吾为不知人也。此必愚民乐乱，妄引之耳。”促理出之。辟为丞相主簿西曹属。令曰：“舜举皋陶，不仁者远；臧否得中，望于贤属矣。”关羽围樊、襄阳。太祖以汉帝在许，近贼，欲徙都。司马宣王及济说太祖曰：“于禁等为水所没，非战攻之失，于国家大计未足有损。刘备、孙权，外亲内疏，关羽得志，权必不愿也。可遣人劝蹑其后，许割江南以封权，则樊围自解。”太祖如其言。权闻之，即引兵西袭公安、江陵。羽遂见禽。
+蒋济字子通，楚国平阿人也。仕郡计吏、州别驾 ^[官名。别驾也称别驾从事，是州刺史的佐官；刺史巡视辖境时，其别乘驿车随行，故称别驾。汉设别驾从事；魏晋沿用汉制，各州都设别驾。总理众务，职权甚重，当刺史之半；隋设郡丞，唐初改隋之郡丞为别驾，后又改称长史。到唐朝中叶以后，别驾、长史并置，但职权任务都已轻了许多。宋朝不置别驾而设通判，其职权任务类似别驾，因此，后世称通判为别驾。] 。
+建安十三年 `r n("208年")` ，孙权率众围合肥。时大军征荆州，遇疾疫，唯遣将军*张喜*单 `r n("仅,仅仅")` 将千骑，过领汝南兵以解围，颇复 `r n("倾倒。或还能再有")` 疾疫。济乃密白刺史伪得喜书，云步骑四万已到雩娄 ^[yúlóu。古邑名。春秋吴邑，后属楚。在今河南省固始县东南。《左传》襄公二十六年(前547年)：“楚子、秦人侵吴，及雩娄，闻吴有备而还。”即此。西汉置县。] ，遣主簿迎喜。三部使赍书 `r n("jī shū。亦作“賷书”。送信")` 语城中守将，一部得入城，二部为贼所得。权信之，遽 `r n("jù。匆忙；急")` 烧围走，城用得全。`r co("此段言济计奇")` 
+明年使于谯 ^[古县名。秦置。在今安徽省亳县] ，太祖问济曰：“昔孤与袁本初对官渡，徙燕、白马民，民不得走，贼亦不敢钞 `r n("掠取;抢掠。后作“抄”")` 。今欲徙淮南民，何如？”济对曰：“是时兵弱贼强，不徙必失之。自破袁绍，北拔柳城 ^[位于今辽宁省朝阳县十二台乡袁台子村的汉代古城]，南向江、汉，荆州交臂，威震天下，民无他志。然百姓怀土，实不乐徙，惧必不安。”太祖不从，而江、淮间十余万众，皆惊走吴。后济使诣邺，太祖迎见大笑曰：“本但欲使避贼，乃更驱尽之。”拜济丹阳太守 `r co("操自嘲而拜官，大胸襟也")` 。`r co("此段言济通形势")` 
+大军南征还，以*温恢*为扬州刺史，济为别驾。令曰：“[季子为臣，吴宜有君]{.underline} `r n("出自先秦公羊高的《吴子使札来聘》。吴本无君，季子贤德，使吴有君。")` 。今君还州，吾无忧矣。”民有诬告济为谋叛主率者，太祖闻之，指（有）〔前〕令与左将军*于禁*、沛相*封仁*等曰：“蒋济宁有此事！有此事，吾为不知人也。此必愚民乐乱，妄引之耳。”促理 `r n("通“吏”。狱官")` 出之。辟为丞相主簿西曹属。令曰：“[舜举皋陶 ^[gāoyáo。亦作“皋繇”。亦作“皐陶”。亦作“皋繇”。曾被舜任为掌管刑法的官"] ，不仁者远]{.underline} `r n("《论语·颜渊》笫二十二章。朱熹《集注》：“人皆化而为仁,不见有不仁者,若其远去尔”")` ；臧否 `r n("品评；褒贬")` 得中 `r n("适中，适当")` ，望于贤属矣。” `r co("此段言济深得操赏识")` 
+关羽围樊、襄阳。太祖以汉帝在许，近贼，欲徙都。司马宣王及济说太祖曰：“于禁等为水所没，非战攻之失，于国家大计未足有损。刘备、孙权，外亲内疏，关羽得志，权必不愿也。可遣人劝蹑 `r n("蹑,蹈也")` 其后，许割江南以封权，则樊围自解。”太祖如其言。权闻之，即引兵西袭公安、江陵。羽遂见禽。
 
 #### 文帝
 
-文帝即王位，转为相国长史。及践阼，出为东中郎将。济请留，诏曰：“高祖歌曰‘安得猛士守四方’！天下未宁，要须良臣以镇边境。如其无事，乃还鸣玉，未为后也。”济上《万机论》，帝善之。人为散骑常侍。时有诏，诏征南将军夏侯尚曰：“卿腹心重将，（时）〔特〕当任使。恩施足死，惠爱可怀。作威作福，杀人活人。”尚以示济。济既至，帝问曰：“卿所闻见天下风教何如？”济对曰：“未有他善，但见亡国之语耳。”帝忿然作色而问其故，济具以答，因曰：“夫‘作威作福’，《书》之明诫。‘天子无戏言’，古人所慎。惟陛下察之！”于是帝意解，遣追取前诏。黄初三年，与大司马曹仁征吴，济别袭羡溪。仁欲攻濡须洲中，济曰：“贼据西岸，列船上流，而兵入洲中，是为自内地狱，危亡之道也。”仁不从，果败。仁薨，复以济为东中郎将，代领其兵。诏曰：“卿兼资文武，志节〔慷慨〕，常有超越江湖吞吴会之志，故复授将率之任。”顷之，征为尚书。车驾幸广陵，济表水道难通，又上《三州论》以讽帝。帝不从，于是战船数千皆滞不得行。议者欲就留兵屯田，济以为东近湖，北临淮，若水盛时，贼易为寇，不可安屯。帝从之，车驾即发。还到精湖，水稍尽，尽留船付济。船本历适数百里中，济更凿地作四五道，蹴船令聚。豫作土豚遏断湖水，皆引后船，一时开遏入淮中。帝还洛阳，谓济曰：“事不可不晓。吾前决谓分半烧船于山阳池中，卿于后致之，略与吾俱至谯。又每得所陈，实入吾意。自今讨贼计画，善思论之。”
+文帝即王位，转为相国长史 ^[长史。汉之相国、丞相、太尉、大将军、骠骑将军、车骑将军、卫将军、前后左右将军，以及建三公后的大司徒、大司马、大司空皆置，为掾属之长，秩皆千石，丞相长史职权尤重。边郡太守也有长史，掌兵马，亦助太守掌兵，西域长史后代都护成为护理西域之长。汉末州珠算也有长史。魏、晋与两汉略同。南北朝带将军号开府的刺史，属官也有长史，且多兼任首郡（即刺史驻地）太守。王府也有长史，诸王幼年出就藩国，州府之事即由长史代行。隋以后，三师、三公无幕僚，三省长官的属员亦无长史。至唐代州刺史下亦设立长史官，名为刺史佐官，却无实职。亦称为别驾。但大都督府的长史则地位较高，甚至会充任节度使。唐亲王府、都护府、都督府、将帅（诸卫与出征将帅，不包括节度使）、州府（限于上、中州）设长史。品级高下视所属机构而异，从三品至七品不等。宋州府无长史，仅亲王府、都督府有此官。后各代王府也设长史，总管府内事务，其他政府机构，仅元储政院设。]。及践阼 `r n("即帝位。“践，履也；阼，主人阶也。天子祭祀升阼阶……履主阶行事，故云践阼也。”")` ，出为东中郎将 ^[东汉以后，中郎将的名号被各割据势力广泛加于武官，不再限于禁卫统领等职，成为了一个大致介于将军和校尉之间的阶层，其职位、品秩、权力差异很大，统兵将领亦多用此名，其上再加称号，如使匈奴中郎将、北中郎将等。三国时，各中郎将中比较著名的有建威中郎将周瑜、军师中郎将诸葛亮等。又建安中，曹操魏王嗣子曹丕就领五官中郎将，为丞相的副职。杂号将军。] 。济请留，诏曰：“高祖歌曰‘安得猛士守四方’！天下未宁，要须良臣以镇边境。如其无事，乃还鸣玉 `r n("比喻出仕在朝")` ，未为后也。”
+济上《万机论》，帝善之。人为散骑常侍。时有诏，诏征南将军*夏侯尚*曰：“卿腹心重将，（时）〔特〕当任使。恩施足死，惠爱可怀。作威作福，杀人活人。”尚以示济。济既至，帝问曰：“卿所闻见天下风教何如？”济对曰：“未有他善，但见亡国之语耳。”帝忿然作色而问其故，济具以答，因曰：“夫‘作威作福’，《书》 ^[《尚书》，原称为《书》，为先秦时代政事文献的汇编，内容以上古及夏、商、周的君王、重臣进行宣示布告的讲话记录为主] 之明诫。‘天子无戏言’，古人所慎。惟陛下察之！”于是帝意解，遣追取前诏。 `r co("此段言济忠君尽谏")` 
+黄初三年，与大司马曹仁征吴，济别袭羡溪。仁欲攻濡须洲中，济曰：“贼据西岸，列船上流，而兵入洲中，是为自内地狱，危亡之道也。”仁不从，果败。仁薨，复以济为东中郎将，代领其兵。诏曰：“卿兼资文武，志节〔慷慨〕，常有超越江湖吞吴会之志，故复授将率之任。”顷之，征为尚书。车驾幸广陵，济表水道难通，又上《三州论》以讽帝。帝不从，于是战船数千皆滞不得行。议者欲就留兵屯田，济以为东近湖，北临淮，若水盛时，贼易为寇，不可安屯。帝从之，车驾即发。还到精湖，水稍尽，尽留船付济。船本历适数百里中，济更凿地作四五道，蹴船令聚。豫作土豚遏断湖水，皆引后船，一时开遏入淮中。帝还洛阳，谓济曰：“事不可不晓。吾前决谓分半烧船于山阳池中，卿于后致之，略与吾俱至谯。又每得所陈，实入吾意。自今讨贼计画，善思论之。”
 
 #### 明帝
 
