--- a/10-jin-01-emperor.Rmd
+++ b/10-jin-01-emperor.Rmd
@@ -13,7 +13,7 @@ III. 各郡國在每年年底將自己郡內的政績製作成計簿，派遣上
 IV. 上計，從西漢初蕭何起，轉歸丞相府管轄。漢武帝後相權被削弱，上計由近臣尚書主管，但形式上仍由丞相主持。東漢丞相改為司徒後成為虛職，但仍形式上主持上計]
 掾 `r n("jì yuàn 地方掌管计簿的官吏")` 。魏武帝为司空，闻而辟 `r n("7.帝王召见并授与官职")` 之。帝知汉运方微，不欲屈节曹氏，辞以风痹，不能起居。魏武使人夜往密刺之，帝坚卧不动。及魏武为丞相，又辟为文学掾，敕 `r n("凡官长告诫僚属，尊长告谕子孙均称敕")` 行者 `r n("出行的人")` 曰：“若复盘桓，便收 `r n("逮捕，拘押")` 之。”帝惧而就职。于是，使与太子游处 `r n("出游和家居。借指相处，波此生活在一起")` ，迁黄门侍郎 `r n("黄门侍郎在汉代名义上隶属少府  ，又是皇帝近侍。三省六部制建立后，为门下省的官职。汉代的黄门侍郎主要的工作是在皇帝和尚书令之间公事处理的往来传达，属于能自由出入禁中的外官，能接触到众多朝廷机要，地位很重要")` ，转议郎 `r n("与中郎相同，高于侍郎、郎中。议郎职为顾问应对，毋须轮流当值，充当守卫门户等工作。东汉时一般郎官均受五官中郎将、左右中郎将管辖，议郎例外。其官秩也提高到六百石，并得参预朝政")` 、丞相东曹 `r n("丞相幕府官员，主“二千石长吏迁除及军吏”（《后汉书》），权力极大")` 属 `r n("丞相、太尉掾吏其正职称掾，副职称属，皆比二百石")` ，寻 `r n("表示时间，相当于“不久、接着、随即")` 转主簿 `r n("掌置。各级主官属下掌管文书的佐吏")` 。从讨张鲁，言于魏武曰：“刘备以诈力虏刘璋，蜀人未附而远争江陵，此机不可失也。今若曜威汉中，益州震动，进兵临之，势必瓦解。因此之势，易为功力。圣人不能违时，亦不失时矣。”魏武曰：“人苦无足 `r n("满足")` ，既得陇右，复欲得蜀！”言竟不从。既而从讨孙权，破之。军还，权遣使乞降，上表称臣，陈说天命。魏武帝曰：“此儿欲踞吾著炉炭上邪！”答曰：“汉运垂终，殿下 `r n("对太子及诸王的尊称")` 十分天下而有其九，以服事 `r n("臣服听命")` 之。权之称臣，天人之意也。虞、夏、殷、周不以谦让者，畏天知命也。” 
 
-魏国既建，迁太子中庶子 `r n("秦、汉为太子侍从官。历代沿置")` 。每与大谋，辄有奇策，为太子所信重，与陈群、吴质、朱乐号曰四友。迁为军司马 `r n("汉有军司马，为大将军属官。大将军营（即大将军直属部队）分五部，每部校尉一人，秩比二千石；军司马一人，秩比千石")` ，言于魏武曰：“昔箕子 `r n("商纣王的叔父，文丁的儿子，帝乙的弟弟，官太师，因其封地与箕，故称箕子，他与微子、比干齐名，史称“殷末三贤”")` 陈 `r n("述说")` 谋，以食为首。今天下不耕者盖二十余万，非经国远筹也。虽戎甲未卷，自宜且耕且守。”魏武纳之，于是务农积谷，国用丰赡 `r n("丰富、充足")` 。帝又言荆州刺史 `r n("西汉孝成帝时期刺史改称州牧，职权进一步扩大，由监察官变为地方军事行政长官")` 胡修粗暴，南乡 `r n("今河南淅川县东南")` 太守 `r n("官名。战国时对郡守的尊称。汉景帝时成为一郡的最高行政长官。至隋初存州废郡，州刺史代太守。明清时专以称知府")` 傅方骄奢，并不可居边。魏武不之察。及蜀将羽围曹仁于樊 `r n("樊城之戰，亦可稱為關羽北伐，是漢末三國時期的一場重要戰役。此役中劉備大將關羽父子被孫權俘殺，劉備治下的部分荊州完全落入孫權手中，劉備與孫權關係破裂，此後發生夷陵之戰")` ，于禁等七军皆没 `r n("219年七月，關羽率領部隊北伐荊州北部曹魏所屬的樊城，曹操派出大將于禁率領七軍（每一萬二千五百士兵稱作一軍）援救襄樊。八月連綿大雨，漢水暴漲，水高五至六丈，于禁所率領的七軍全為漢水所淹")` ，修、方果降羽，而仁围甚急焉。是时汉帝都许昌 `r n("東漢末年，曹操挾漢獻帝劉協到許縣，此地因此成為東漢的實際首都。曹丕建立魏朝時，定都洛陽，取「漢因許而亡，魏因許而昌」之意，將許縣、許都改稱許昌，名稱一直沿用至今")` ，魏武以为近贼，欲徙河北。帝谏曰：“禁等为水所没，非战守之所失，于国家大计未有所损，而便迁都，既示敌以弱，又淮沔 `r n("沔水（今汉江），出甘肃省武都沮县东狼谷，向东南在汉口流入长江")` 之人大不安矣。孙权、刘备，外亲内疏，羽之得意，权所不愿也。可喻 `r n("喻，告也")` 权所，令掎 `r n("牵制，拖住使不能自由行动")` 其后，则樊围自解。”魏武从之。权果遣将吕蒙西袭公安，拔之，羽遂为蒙所获。 
+魏国既建，迁太子中庶子 `r n("秦、汉为太子侍从官。历代沿置")` 。每与大谋，辄有奇策，为太子所信重，与陈群、吴质、朱乐号曰四友。迁为军司马 `r n("汉有军司马，为大将军属官。大将军营（即大将军直属部队）分五部，每部校尉一人，秩比二千石；军司马一人，秩比千石")` ，言于魏武曰：“昔箕子 `r n("商纣王的叔父，文丁的儿子，帝乙的弟弟，官太师，因其封地与箕，故称箕子，他与微子、比干齐名，史称“殷末三贤”")` 陈 `r n("述说")` 谋，以食为首。今天下不耕者盖二十余万，非经国远筹也。虽戎甲未卷，自宜且耕且守。”魏武纳之，于是务农积谷，国用丰赡 `r n("丰富、充足")` 。帝又言荆州刺史 `r n("西汉孝成帝时期刺史改称州牧，职权进一步扩大，由监察官变为地方军事行政长官")` 胡修粗暴，南乡 `r n("今河南淅川县东南")` 太守 `r n("官名。战国时对郡守的尊称。汉景帝时成为一郡的最高行政长官。至隋初存州废郡，州刺史代太守。明清时专以称知府")` 傅方骄奢，并不可居边。魏武不之察。及蜀将羽围曹仁于樊 `r n("樊城之戰，亦可稱為關羽北伐，是漢末三國時期的一場重要戰役。此役中劉備大將關羽父子被孫權俘殺，劉備治下的部分荊州完全落入孫權手中，劉備與孫權關係破裂，此後發生夷陵之戰")` ，于禁等七军皆没 `r n("219年七月，關羽率領部隊北伐荊州北部曹魏所屬的樊城，曹操派出大將于禁率領七軍（每一萬二千五百士兵稱作一軍）援救襄樊。八月連綿大雨，漢水暴漲，水高五至六丈，于禁所率領的七軍全為漢水所淹")` ，修、方果降羽，而仁围甚急焉。是时汉帝都许昌 `r n("東漢末年，曹操挾漢獻帝劉協到許縣，此地因此成為東漢的實際首都。曹丕建立魏朝時，定都洛陽，取「漢因許而亡，魏因許而昌」之意，將許縣、許都改稱許昌，名稱一直沿用至今")` ，魏武以为近贼，欲徙河北。帝谏曰：“禁等为水所没，非战守之所失，于国家大计未有所损，而便迁都，既示敌以弱，又淮沔 `r n("沔水（今汉江），出甘肃省武都沮县东狼谷，向东南在汉口流入长江")` 之人大不安矣。孙权、刘备，外亲内疏，羽之得意，权所不愿也。可喻 `r n("喻，告也")` 权所，令掎 `r n("牵制，拖住使不能自由行动")` 其后，则樊围自解。”魏武从之。权果遣将吕蒙西袭公安，拔之，羽遂为蒙所获。`r co("许权割江南与之。见 [《三国志》第一段末](#三国志-蒋济) ")` 
 
 魏武以荆州遗黎及屯田在颍川者逼近南寇，皆欲徙之。帝曰：“荆楚轻脱，易动难安。关羽新破，诸 `r n("众;各")` 为恶者藏窜观望。今徙其善者，既伤其意，将令去者不敢复还。”从之。其后诸亡者悉复业。及魏武薨于洛阳，朝野危惧。帝纲纪 `r n("治理；管理")` 丧事，内外肃然。乃奉梓宫 `r n("皇帝、皇后或重臣的棺材")` 还邺。 
 
