More `狄仁杰`. Tufte style can not by trivially applied to gitbook, so I just leave the quote foot as it is.

--- a/20-tang-02-official.Rmd
+++ b/20-tang-02-official.Rmd
@@ -65,33 +65,70 @@ knitr::include_graphics("images/唐中期-并州-汴州.jpg")
     > 
     > 帝欲徙冀州士家十万户实河南。时连蝗民饥，群司以为不可，而帝意甚盛。毗与朝臣俱求见，帝知其欲谏，作色以见之，皆莫敢言。毗曰：“陛下欲徙士家，其计安出：”帝曰：“卿谓我徙之非邪？”毗曰：“诚以为非也。”帝曰：“吾不与卿共议也。”毗曰：“陛下不以臣不肖，置之左右，厕之谋议之官，安得不与臣议邪！臣所言非私也，乃社稷之虑也，安得怒臣！”帝不答，起入内；毗随而引其裾，帝遂奋衣不还，良久乃出，曰：“佐治，卿持我何太急邪？”毗曰：“今徙，既失民心，又无以食也。”帝遂徙其半
 
+[^岐州]: 北魏太和十一年(487)置，治所在雍城镇(今陕西凤翔县东五里)。辖境相当今陕西周至、麟游、陇县、宝鸡、太白等市县地。隋开皇元年(581)移治雍县(今凤翔县)。大业三年(607)改为扶风郡。唐武德元年(618)复为岐州，天宝元年(742)又改为扶风郡。
 
-7. 狄仁杰因使岐州，遇背军士卒数百人，夜纵剽掠，昼潜山谷，州县擒捕繫狱者数十人。仁杰曰：‘此途穷者，不辑之，当爲患。’乃明榜要路，许以陈首。仍出繫狱者，廪而给遣之。高宗喜曰：‘仁杰识国家大体。’乃颁示天下，宥其同类，潜窜毕首矣。《大唐新语》四。
-8. 狄仁杰爲度支员外郎，车驾将幸汾阳宫，仁杰奉使先脩官顿。并州长史李玄冲以道出妒女祠，俗称有盛衣服车马过，必致雷风之异，欲别开路。仁杰谓曰：‘天子行幸，千乘万骑，风伯清尘，雨师洒道，何妒女之敢害而欲避之！’玄冲遂止，果无他变。上闻之，叹曰：‘可谓真丈夫也！’《封氏闻见记》九。《唐语林》三。《唐会要》二七亦载此事，繫于高宗调露元年。
-9. 后爲冬官侍郎，充江南安抚使，吴、楚风俗，岁时尚淫祀，祠庙凡一千七百馀所，仁杰并令焚之。有项羽神，号爲楚王庙，祈祷至多，爲吴人所惮。仁杰先致檄书，责其丧失江东八千子弟而妄受牲牢之荐，然后焚除。《封氏闻见记》九。《唐语林》三。
-10. 唐垂拱四年，安抚大使狄仁杰檄告西楚霸王项君将校等，略曰：‘鸿名不可以谬假，神器不可以力争，应天者膺乐推之名，背时者非见机之主。自祖龙御￼，横噬诸侯，任赵高以当轴，弃蒙恬而齿剑。沙丘拚祸于前，望夷覆灭于后，七庙堕圮，万姓屠原，鸟思静于飞尘，鱼岂安于沸水。赫矣皇汉，受命玄穹，膺赤帝之镇符，当素灵之缺运。俯张地纽，彰凤举之符，仰缉天纲，鬱龙兴之兆。而君潜游泽国，啸聚水乡，矜扛鼎之雄，逞拔山之力，莫测天符之所会，不知曆数之有归。遂奋关中之翼，竟垂垓下之翅，盖尽由于人事，焉有属于天亡！虽驱百万之兵，终弃八千之子。以爲殷鑑，岂不惜哉！当匿魄东峯，收魂北极，岂合虚承庙食，广费牲牢。仁杰受命方隅，循革攸寄，今遣焚燎祠宇，削平台室，使蕙￼销烬，羽帐随烟，君宜速迁，勿爲人患。檄到如律令。’遂除项羽庙，馀小神并尽，惟会稽禹庙存焉。《朝野佥载》（张本《説郛》二）。《广记》三一五引作《吴兴掌故集》。
-11. 狄内史仁杰始爲江南安抚使，以周赧王、楚王项羽、吴王夫差、越王勾践、吴夫槩王、春申君、赵佗、马援、吴桓王等神庙七百馀所，有害于人，悉除之。惟夏禹、吴太伯、季札、伍胥四庙存焉。《隋唐嘉话》下。《唐语林》三。
-12. 则天将不利王室，越王贞于汝南举兵，不克，士庶坐死者六百馀人，没官人五千馀口，司刑使相次而至，逼促行刑。时狄仁杰检校刺史，哀其诖误，止司刑使，停斩决，飞奏表曰：‘臣欲闻奏，似爲逆人论理；知而不言，恐乖陛下存恤之意。奏成复毁，意不能定。此辈非其本心，愿矜其诖误。’表奏，特敕配流丰州。诸囚次于宁州，宁州耆老郊迎之，曰：‘我狄使君活汝耶！’相携哭于碑侧，斋三日而后行。诸囚至丰州，复立碑纪德。初，张光辅以宰相讨越王，既平之后，将士恃威，徵敛无度，仁杰率皆不应。光辅怒曰：‘州将轻元帅耶？何徵发之不赴？’仁杰〔曰〕：‘汝南勃乱，一越王（耶）〔耳〕。（仁杰曰）今一越王已死，而万越王生。’光辅质之，仁杰曰：‘明公亲董戎旃二十馀万，所在劫夺，远迩流离，创钜之馀，肝脑涂地。此非一越王死而万越王生耶？且脇从之徒，势不自固，所以先著纲理之也。自天兵暂临，其弃城归顺者不可胜计，绳坠四面成蹊，奈何纵求功之人，杀投降之士？但恐冤声腾沸，上彻于天，将请尚方（断）〔斩〕马剑斩足下，当北面请命，死犹生也。’遂爲光辅所谮，左授复州刺史。寻徵还魏州刺史，威惠大行，百姓爲立生祠。迁内史，及薨，朝野悽恸。则天赠文昌左相，中宗朝赠司空，睿宗朝追封梁国公，哀荣备于三朝，代莫与爲比。《大唐新语》四。　案：原文有误，据《旧唐书》本传改。
-13. 狄仁杰爲内史，则天谓之曰：‘卿在汝南，甚有善政，欲知谮卿者乎？’仁杰谢曰：‘陛下以臣爲过，臣当改之；陛下明言，臣之幸也。若臣不知谮者，并爲友善，臣请不知。’则天深加歎异。《大唐新语》七。
+7. 狄仁杰因使岐州[^岐州]，遇背 `r n("反叛;背弃;违背")` 军士卒数百人，夜纵 `r n("放纵;随心所欲")` 剽掠，昼潜山谷，州县擒捕繫狱 `r n("系狱。囚禁于牢狱")` 者数十人。仁杰曰：‘此途穷者，不辑 `r n("使安定")` 之，当爲患。’乃明榜 `r n("于")` 要路，许以陈首 `r n("自首认罪")` 。仍 `r n("一再;频繁")` 出繫狱者，廪 `r n("公家发给粮食")` 而给遣之。高宗喜曰：‘仁杰识国家大体。’乃颁示天下，宥 `r n("宽容，饶恕，原谅")` 其同类，潜窜毕首矣。《大唐新语》四。
+
+[^度支员外郎]: 官名，唐宋皆置，属户部，为度支郎中的佐官，掌计度军国之用，量贡赋税租之入以为出。掌全国的租税、物产丰收或减产应交赋税及水陆道涂之利等事。
+
+[^汾阳宫]: 汾阳宫，古宫名。隋炀帝时所建。故址在今山西省宁武县西南管涔山上。规模壮观，殿宇楼阁，水榭歌台，栈道回廊，应有皆有。因为该行宫距汾河的发源地不远，故史称“汾阳宫”（或称“汾源宫”），据说，隋炀帝经常来这里巡猎、避暑、游玩，并在行宫接见大臣和使者，商讨和处理国家大事。当然，也少不了携爱妃宫女们云游行宫，踏青湖边，打情骂俏，赏景吟诗，于美酒声色中寻欢作乐，穷奢极欲地炫耀帝王的风流。只是因为年代久远，行宫往日的壮观景象已不复存在。
+
+[^雷风之异]: 第三十二卦恒雷风恒。震上巽下。
+
+    恒：亨，无咎，利贞，利有攸往。
+
+    彖曰：恒，久也。刚上而柔下，雷风相与，巽而动，刚柔皆应，恒。恒亨无咎，利贞；久於其道也，天地之道，恒久而不已也。利有攸往，终则有始也。日月得天，而能久照，四时变化，而能久成，圣人久於其道，而天下化成；观其所恒，而天地万物之情可见矣！
+
+
+8. 狄仁杰为度支员外郎[^度支员外郎]，车驾将幸汾阳宫[^汾阳宫]，仁杰奉使先脩 `r n("假借为“修”。修理;整修")` 官顿 `r n("供官员食宿的馆舍")` 。并州长史 *李玄冲* 以道 `r n("道路")` 出妒女祠 `r n("亦作“妬女祠”。祠名")` ，俗称有盛衣服车马过，必致雷风之异[^雷风之异]，欲别开路。仁杰谓曰：‘天子行幸，千乘万骑，风伯清尘，雨师洒道，何妒女之敢害而欲避之！’玄冲遂止，果无他变。上闻之，叹曰：‘可谓真丈夫也！’《封氏闻见记》九。《唐语林》三。《唐会要》二七亦载此事，系于高宗调露元年。
+
+[^冬官侍郎]: 官名。即工部侍郎，唐武则天光宅元年(684)改，中宗神龙元年(705)复名工部侍郎。
+
+[^安抚使]: 官名。隋朝有安抚大使，为行军主帅的兼职，由二品以上的官员担任。唐朝前期为临时派往战后地区或灾区的官员，称安抚使；中期以后，各道都有节度使、观察使，便不再设此官。宋朝则为掌管一方军事和民政的官员，称安抚使或经略安抚使，常由知州、知府兼任，有“帅司”之称。由二品以上的官员充任时称安抚大使。元朝仅在边远地区设置，位在宣慰使和宣抚使之下；到明、清两朝，仅是边远地区的武职土官。
+
+9. 后为冬官侍郎[^冬官侍郎]，充江南安抚使[^安抚使]，吴、楚风俗，岁时尚淫祀，祠庙凡一千七百余所，仁杰并令焚之。有项羽神，号为楚王庙，祈祷至多，为吴人所惮。仁杰先致檄书，责其丧失江东八千子弟而妄受牲牢 `r n("犹牲畜")` 之荐 `r n("无酒肉作贡品的祭祀，素祭")` ，然后焚除。《封氏闻见记》九。《唐语林》三。
+
+[^垂拱]: 垂拱（685年正月—688十二月）是唐睿宗李旦的年号，但是实际上武则天操纵朝政，睿宗毫无实权。一般算作武则天的年号。
+
+[^蒙恬]: 蒙恬（？～前210年），姬姓，蒙氏，名恬，齐国蒙山（今山东省临沂市蒙阴县联城乡边家城子村）人。秦朝时期名将，上卿蒙骜之孙，内史蒙武之子。
+
+    出身名将世家，自幼胸怀大志。率军攻破齐国，拜为内史 ，深得秦始皇宠信。秦统一六国后，率领三十万大军北击匈奴，收复河南之地，威震匈奴，誉为“中华第一勇士”。中国西北最早的开发者，是古代开发宁夏第一人。监修万里长城和九州直道，克服了国内交通闭塞的困境，大大促进了北方各族人民经济、文化的交流和融合。曾经改良毛笔，被誉为“笔祖”。
+
+    秦始皇去世后，中车令赵高、丞相李斯、公子胡亥暗中谋划政变，导致蒙恬吞药自杀。
+
+10. 唐垂拱[^垂拱]四年，安抚大使狄仁杰檄告西楚霸王项君将校等，略曰：‘鸿名不可以谬假，神器 `r n("神器。帝王的印玺,借指帝位、国家权力")` 不可以力争，应天者膺 `r n("")` 乐推 `r n("乐意拥戴")` 之名，背时者非见机 `r n("见机。察看事情发展的形势与机会")` 之主。自祖龙御 `r n("1.亦作\"龙驭\"。 2.指太阳 3.指天子车驾。 4.借指皇帝。 5.谓君临天下。 6.婉词。谓帝王去世。")` ，横噬诸侯，任赵高以当轴 `r n("处于核心地位。比喻官居要职")` ，弃蒙恬[^蒙恬]而齿剑 `r n("犹伏剑。指被杀害或自杀")` 。沙丘拚 `r n("pàn 舍弃，不顾惜")` 祸于前，望夷 `r n("秦代宫名。故址在今陕西省泾阳县东南﹐因东北临泾水以望北夷﹐故名。秦末﹐赵高迫杀秦二世于此")` 覆灭于后，七庙 `r n("帝王的宗庙,供奉太祖及三昭三穆共七代祖先。一般指代国家")` 堕圮 `r n("duò pǐ。毁坏;倒塌")` ，万姓屠原 `r n("屠原。今甘肃泾川县北")` ，鸟思静于飞尘，鱼岂安于沸水。赫矣皇汉，受命玄穹，膺 `r n("担当，接受重任")` 赤帝 `r n("炎帝神农氏")` 之镇符，当素灵 `r n("白蛇的精灵。指汉高祖斩白蛇有老妪夜哭之事")` 之缺运。俯张 `r n("看，望")` 地纽 `r n("地纽；地维。维系大地的绳子。古人以为天圆地方，天有九柱支持，地有四维系缀。故亦指地的四角。或喻纪纲")` ，彰凤举 `r n("扬威。升仙")` 之符，仰缉天纲，郁 `r n("积聚")` 龙兴之兆。而君 `r n("项羽")` 潜游泽国，啸聚水乡，矜 `r n("自夸;自恃")` 扛鼎之雄，逞拔山之力，莫测天符之所会，不知历数之有归。遂奋关中之翼，竟垂垓下之翅，盖尽由于人事，焉有属于天亡！虽驱百万之兵，终弃八千之子。以为殷鉴，岂不惜哉！当匿魄东峯 `r n("fēng。同“峰”")` ，收魂北极，岂合 `r n("适合")` 虚承庙食，广费牲牢。仁杰受命方隅 `r n("边疆")` ，循 `r n("沿袭；继承")` 革 `r n("改变；变化")` 攸 `r n("所")` 寄，今遣焚燎祠宇，削平台室，使蕙销烬 `r n("？")` ，羽帐随烟，君宜速迁，勿为人患。檄到如律令。’遂除项羽庙，余小神并尽，惟会稽禹庙 `r n("大禹庙")` 存焉。《朝野佥载》（张本《说郛》二）。《广记》三一五引作《吴兴掌故集》。
+
+    > 夫道有因有循，有革有化。因而循之，与道神之。革而化之，与时宜之。故因而能革，天道乃得；革而能因，天道乃驯。夫物不因不生，不革不成。故知因而不知革，物失其则；知革而不知因，物失其均。革之匪时，物失其基。因之匪理，物丧其纪。因革乎因革，国家之矩范也。矩范之动，成败之效也。
+    > 
+    > --- 扬雄《太玄经·太玄莹》
+
+[^周赧王]: 战国时周王。名延(一作诞)，亦称王赧。公元前314—前256年在位。慎靓王之子。在位时，依附西周武公，处列强之间，深受兼并之害。又曾依附于秦。赧王五十九年(前256)秦攻韩，取阳城(今河南登封东南告成镇)。西周恐，与诸侯合纵隔断秦与阳城通路。秦使将军摎伐西周，西周君降秦，赧王亦卒。至此周天子名实俱亡。秦庄襄王元年(前249)秦更灭东周，周代亡。相传他因欠民债，逃避于台上，周人名其台曰“逃债台”。赧王之名即由此而得。
+
+11. 狄内史仁杰始为江南安抚使，以周赧王[^周赧王]、楚王项羽、吴王夫差、越王勾践、吴夫槩王、春申君、赵佗、马援、吴桓王等神庙七百余所，有害于人，悉除之。惟夏禹、吴太伯、季札、伍胥四庙存焉。《隋唐嘉话》下。《唐语林》三。
+
+12. 则天将不利王室，越王贞于汝南举兵，不克，士庶坐死者六百余人，没官人五千余口，司刑使相次而至，逼促行刑。时狄仁杰检校刺史，哀其诖误，止司刑使，停斩决，飞奏表曰：‘臣欲闻奏，似为逆人论理；知而不言，恐乖陛下存恤之意。奏成复毁，意不能定。此辈非其本心，愿矜其诖误。’表奏，特敕配流丰州。诸囚次于宁州，宁州耆老郊迎之，曰：‘我狄使君活汝耶！’相携哭于碑侧，斋三日而后行。诸囚至丰州，复立碑纪德。初，张光辅以宰相讨越王，既平之后，将士恃威，征敛无度，仁杰率皆不应。光辅怒曰：‘州将轻元帅耶？何征发之不赴？’仁杰〔曰〕：‘汝南勃乱，一越王（耶）〔耳〕。（仁杰曰）今一越王已死，而万越王生。’光辅质之，仁杰曰：‘明公亲董戎旃二十余万，所在劫夺，远迩流离，创钜之余，肝脑涂地。此非一越王死而万越王生耶？且脇从之徒，势不自固，所以先着纲理之也。自天兵暂临，其弃城归顺者不可胜计，绳坠四面成蹊，奈何纵求功之人，杀投降之士？但恐冤声腾沸，上彻于天，将请尚方（断）〔斩〕马剑斩足下，当北面请命，死犹生也。’遂为光辅所谮，左授复州刺史。寻征还魏州刺史，威惠大行，百姓为立生祠。迁内史，及薨，朝野凄恸。则天赠文昌左相，中宗朝赠司空，睿宗朝追封梁国公，哀荣备于三朝，代莫与为比。《大唐新语》四。　案：原文有误，据《旧唐书》本传改。
+
+13. 狄仁杰为内史，则天谓之曰：‘卿在汝南，甚有善政，欲知谮卿者乎？’仁杰谢曰：‘陛下以臣为过，臣当改之；陛下明言，臣之幸也。若臣不知谮者，并为友善，臣请不知。’则天深加叹异。《大唐新语》七。
+
 14. 见来俊臣2。
 
-15. 唐狄仁杰之贬也，路经汴州，欲留半日医疾，开封县令霍献可追逐当日出界，狄公甚衔之。及回爲宰相，霍已爲郎中，狄欲中伤之而未果。则天命择御史中丞，凡两度承旨，皆忘。后则天又问之，狄公卒对，无以应命，唯记得霍献可，遂奏之，恩制除御史中丞。后狄公谓霍曰：‘某初恨公，今却荐公，乃知命也，岂由于人耶？’《定命録》（《广记》一四六）。
-16. 魏州南郭狄仁杰庙，即生祠堂也。天后朝，仁杰爲魏州刺史，有善政，吏民爲之立生祠。及入朝，魏之士女，每至月首皆诣祠奠醊。仁杰方朝，是日亦有醉色，天后素知仁杰初不饮酒，诘之，具以事对。天后使验问乃信。《玉堂閒话》（《广记》三一三）。
-17. 《新唐史·狄仁杰传》载仁杰转幽州都督，赐紫袍龟带，后自制金字十二于袍，以旌其忠。其十二字史不著。予按，《家传》云：‘以金字环绕五色双鸾，其文曰：“敷政术，守清勤。昇显位，励相臣。”乃命録之。’《新史》不惟不著十二字，虽‘五色双鸾’亦不録也。《能改斋漫録》一四。
+15. 唐狄仁杰之贬也，路经汴州，欲留半日医疾，开封县令霍献可追逐当日出界，狄公甚衔之。及回为宰相，霍已为郎中，狄欲中伤之而未果。则天命择御史中丞，凡两度承旨，皆忘。后则天又问之，狄公卒对，无以应命，唯记得霍献可，遂奏之，恩制除御史中丞。后狄公谓霍曰：‘某初恨公，今却荐公，乃知命也，岂由于人耶？’《定命录》（《广记》一四六）。
+16. 魏州南郭狄仁杰庙，即生祠堂也。天后朝，仁杰为魏州刺史，有善政，吏民为之立生祠。及入朝，魏之士女，每至月首皆诣祠奠醊。仁杰方朝，是日亦有醉色，天后素知仁杰初不饮酒，诘之，具以事对。天后使验问乃信。《玉堂闲话》（《广记》三一三）。
+17. 《新唐史·狄仁杰传》载仁杰转幽州都督，赐紫袍龟带，后自制金字十二于袍，以旌其忠。其十二字史不着。予按，《家传》云：‘以金字环绕五色双鸾，其文曰：“敷政术，守清勤。升显位，励相臣。”乃命录之。’《新史》不惟不着十二字，虽‘五色双鸾’亦不录也。《能改斋漫录》一四。
 18. 见娄师德6、7。
-19. 唐天后既立国号周，又欲立三思爲后。狄仁杰切谏，上曰：‘奈何有武氏临朝万万年之謡？’公对曰：‘陛下改万岁登封元年，又改万岁通天元年，又改大足元年，则万万之数足矣。’武后大悟，始有归中宗之意。《纪异録》（《分门古今类事》一五）。　案：狄仁杰卒于圣曆三年，此条叙事年代有误。
-20. 后纳诸武之议，将移宗社，拟立武三思爲储副，迁庐陵王于房陵。诸武阴计，日夜献谋曰：‘陛下姓武，合立武氏，未有天子而取别姓将爲后者也。’天后既已许，礼问羣臣曰：‘朕年齿将衰，国无储主，今欲择善，谁可当之？朕虽得人，终在羣议。’诸宰臣多闻计定，言皆希旨；仁杰独退立，寂无一言。天后问曰：‘卿独无言，当有异见。’公曰：‘有之。臣上观乾象，无易主之文；中察人心，实未厌唐德。’天后曰：‘卿何以知之？’公曰：‘顷者匈奴犯边，陛下使梁王三思于都市召募，一月之外，不满千人。后庐陵王踵之，未经二旬，数盈五万。以此观之，人心未去。陛下将欲继统，非庐陵王，馀实非臣所知。’天后震怒，命左右扶而去之。《狄梁公传》（《通鑑考异》一一）。　案：《通鑑考异》有考辨之言。
-21. 后经旬，召公入，曰：‘朕昨夜梦与人双陆，频不见胜，何也？’对曰：‘双陆不胜，盖爲宫中无子。此是上天之意，假此以示陛下，安可久虚储位哉？’天后曰：‘是朕家事，断在胸中，卿岂合预焉！’仁杰对曰：‘臣闻王者以天下爲家，四海之内，悉爲臣妾，何者不爲陛下家事！君爲元首，臣爲股肱，臣安得不预焉！’又命扶出，竟不纳。《狄梁公传》（《通鑑考异》一一）。参看王方庆2。
+19. 唐天后既立国号周，又欲立三思为后。狄仁杰切谏，上曰：‘奈何有武氏临朝万万年之谣？’公对曰：‘陛下改万岁登封元年，又改万岁通天元年，又改大足元年，则万万之数足矣。’武后大悟，始有归中宗之意。《纪异录》（《分门古今类事》一五）。　案：狄仁杰卒于圣历三年，此条叙事年代有误。
+20. 后纳诸武之议，将移宗社，拟立武三思为储副，迁庐陵王于房陵。诸武阴计，日夜献谋曰：‘陛下姓武，合立武氏，未有天子而取别姓将为后者也。’天后既已许，礼问群臣曰：‘朕年齿将衰，国无储主，今欲择善，谁可当之？朕虽得人，终在群议。’诸宰臣多闻计定，言皆希旨；仁杰独退立，寂无一言。天后问曰：‘卿独无言，当有异见。’公曰：‘有之。臣上观干象，无易主之文；中察人心，实未厌唐德。’天后曰：‘卿何以知之？’公曰：‘顷者匈奴犯边，陛下使梁王三思于都市召募，一月之外，不满千人。后庐陵王踵之，未经二旬，数盈五万。以此观之，人心未去。陛下将欲继统，非庐陵王，余实非臣所知。’天后震怒，命左右扶而去之。《狄梁公传》（《通鉴考异》一一）。　案：《通鉴考异》有考辨之言。
+21. 后经旬，召公入，曰：‘朕昨夜梦与人双陆，频不见胜，何也？’对曰：‘双陆不胜，盖为宫中无子。此是上天之意，假此以示陛下，安可久虚储位哉？’天后曰：‘是朕家事，断在胸中，卿岂合预焉！’仁杰对曰：‘臣闻王者以天下为家，四海之内，悉为臣妾，何者不为陛下家事！君为元首，臣为股肱，臣安得不预焉！’又命扶出，竟不纳。《狄梁公传》（《通鉴考异》一一）。参看王方庆2。
 
-22. 则天后尝梦一鹦鹉，羽毛甚伟，两翅俱折。以问宰臣，羣公默然，内史狄仁杰曰：‘鹉者，陛下姓也；两翅折，陛下二子庐陵、相王也。陛下起此二子，两翅全也。’武承嗣、武三思连项皆赤。后契丹围幽州，檄朝廷曰‘还我庐陵、相王来’，则天乃忆狄公之言，曰：‘卿曾爲我占梦，今乃应矣。朕欲立太子，何者爲得？’仁杰曰：‘陛下内有贤子，外有贤姪，取舍详择，断在圣衷。’则天曰：‘我自有圣子，承嗣、三思是何疥癣！’承嗣等惧，掩耳而走。即降敕追庐陵，立爲太子，充元帅。初募兵，无有应者，闻太子行，北邙山头皆兵满，无容人处。贼自退散。《朝野佥载》三。《金銮密记》（陶本《説郛》四九）。　案：《通鑑考异》一一引《朝野佥载》此文，‘即降敕追庐陵’下有‘河内王奏，不许入城，龙门安置。贼徒转盛，陷没冀州，则天急’数句。‘立爲太子’，引作‘乃立庐陵王爲太子’。
-23. 天后御一小殿，垂帘于后，左右隐蔽，外不能知，乃命公坐于阶下，曰：‘前者所议，事实非小，寤寐反覆，思卿所言，弥觉理非甚乖。朕意忠臣事主，岂在多违！今日之间，须易前见。以天下之位在卿一言，可朕意即两全，逆朕心即俱毙！’公从容言曰：‘陛下所言，天子之位，可得专之。以臣所知，是太宗文武皇帝之位，陛下岂得而自有也！太宗身陷锋镝，经纶四海，所以不告劳者，盖爲子孙，岂爲武三思邪！陛下身是大帝皇后，大帝寝疾，权使陛下监国；大帝崩后，合归冢嫡。陛下遂奄有神器，十有馀年。今议缵承，岂可更异！且姑与母孰亲？子与姪孰近？’云云。天后于是歔欷流涕，命左右褰帘，手抚公背，大叫曰：‘卿非朕之臣，是唐社稷之臣！’回谓庐陵王曰：‘拜国老！今日国老与尔天子！’公免冠顿首，涕血洒地，左右扶策，久不能起。天后曰：‘即具所言，宣付中外，择日礼册。’公挥涕而言曰：‘自古以来，岂有偷人作天子！庐陵王留在房州，天下所悉知，今日在内，臣亦不知。臣欲奉诏，若同衞太子之变，陛下何以明臣？’天后曰：‘安可却向房陵！只于石像驿安置，具法驾，陈百僚，就迎之。’于是大呼万岁，储位乃定。《狄梁公传》（《通鑑考异》一一）。　案：《通鑑考异》有考辨之言。
-24. 圣曆三年，则天曰：‘朕令宰相各举尚书郎一人。’狄仁杰独荐男光嗣，由是拜地官尚书郎。莅事有声，则天谓仁杰曰：‘祁奚内举，果得人也。’《唐会要》五三。又《广记》一八五引。
+22. 则天后尝梦一鹦鹉，羽毛甚伟，两翅具折。以问宰臣，群公默然，内史狄仁杰曰：‘鹉者，陛下姓也；两翅折，陛下二子庐陵、相王也。陛下起此二子，两翅全也。’武承嗣、武三思连项皆赤。后契丹围幽州，檄朝廷曰‘还我庐陵、相王来’，则天乃忆狄公之言，曰：‘卿曾为我占梦，今乃应矣。朕欲立太子，何者为得？’仁杰曰：‘陛下内有贤子，外有贤侄，取舍详择，断在圣衷。’则天曰：‘我自有圣子，承嗣、三思是何疥癣！’承嗣等惧，掩耳而走。即降敕追庐陵，立为太子，充元帅。初募兵，无有应者，闻太子行，北邙山头皆兵满，无容人处。贼自退散。《朝野佥载》三。《金銮密记》（陶本《说郛》四九）。　案：《通鉴考异》一一引《朝野佥载》此文，‘即降敕追庐陵’下有‘河内王奏，不许入城，龙门安置。贼徒转盛，陷没冀州，则天急’数句。‘立为太子’，引作‘乃立庐陵王为太子’。
+23. 天后御一小殿，垂帘于后，左右隐蔽，外不能知，乃命公坐于阶下，曰：‘前者所议，事实非小，寤寐反覆，思卿所言，弥觉理非甚乖。朕意忠臣事主，岂在多违！今日之间，须易前见。以天下之位在卿一言，可朕意即两全，逆朕心即具毙！’公从容言曰：‘陛下所言，天子之位，可得专之。以臣所知，是太宗文武皇帝之位，陛下岂得而自有也！太宗身陷锋镝，经纶四海，所以不告劳者，盖为子孙，岂为武三思邪！陛下身是大帝皇后，大帝寝疾，权使陛下监国；大帝崩后，合归冢嫡。陛下遂奄有神器，十有余年。今议缵承，岂可更异！且姑与母孰亲？子与侄孰近？’云云。天后于是歔欷流涕，命左右褰帘，手抚公背，大叫曰：‘卿非朕之臣，是唐社稷之臣！’回谓庐陵王曰：‘拜国老！今日国老与尔天子！’公免冠顿首，涕血洒地，左右扶策，久不能起。天后曰：‘即具所言，宣付中外，择日礼册。’公挥涕而言曰：‘自古以来，岂有偷人作天子！庐陵王留在房州，天下所悉知，今日在内，臣亦不知。臣欲奉诏，若同衞太子之变，陛下何以明臣？’天后曰：‘安可却向房陵！只于石像驿安置，具法驾，陈百僚，就迎之。’于是大呼万岁，储位乃定。《狄梁公传》（《通鉴考异》一一）。　案：《通鉴考异》有考辨之言。
+24. 圣历三年，则天曰：‘朕令宰相各举尚书郎一人。’狄仁杰独荐男光嗣，由是拜地官尚书郎。莅事有声，则天谓仁杰曰：‘祁奚内举，果得人也。’《唐会要》五三。又《广记》一八五引。
 25. 见张柬之2。
-26. 张柬之、桓彦范、敬晖、崔玄暐、袁恕己皆公所荐。公尝退食之后，谓五公曰：‘所恨衰老，身先朝露，不得见五公盛事，冀各保爱，愿尽本心。’五公心知目击，悬悟公意。公寝疾，五公候问，偶对终日，竟无一言。少顷，流涕及枕，但相视而已。五公退出，递不测其由。袁恕己曰：‘岂不气力转羸，须问家事乎？’张柬之曰：‘未有大贤废国谋家者也。’斯须，命张柬之、袁恕己、桓彦范三公入，馀二公立于门外，曰：‘向者无言，盖以二公之故。此二公能断而不能密，若先与议之，事必外泄，一泄之后，则国异而家亡也。至其时或不与共之，事亦不就。梁王三思掌权，可先收而后行也。不然，则必反生大祸。’狄公没后，经岁馀，五公潜会于幽閒之处，叙公当时之言，重结盟约。彻馔之后，相顾欲言，未至其时，恐负前诺，欲言又止，前后数四，桓彦范乃叙其言。言犹未毕，闻户牖之外，声若雷霆，须臾风雨，咫尺莫辨，所坐牀褥悉掷于阶下。五公战惧，不知所据，乃相谓曰：‘此是狄公忠烈之至，假此灵变以惊衆心，不欲吾辈先论此事，未至其时，不可复言也。’斯须，天清日明，不异于初。易之等既诛，袁谓张公曰：‘昔有遗言，使先收三思，岂可捨诸？’张公曰：‘但大事毕功，此是机上之物，岂有逃乎！’后梁王交通于内，王公果爲所谮，俱遭流窜。所期兴废年月，遗约轨模少无异也。《狄梁公传》（《通鑑考异》一一）。　案：《通鑑考异》曰：‘此盖作传者因五人建兴复之功，附会其事，云皆仁杰所举，受教于仁杰耳。其言谲怪无稽，今所不取。’
-27. 狄梁公既立中宗，荐张柬之、袁恕己、桓彦范、崔玄暐、敬晖，五公咸出门下，皆自州县拔居显名，外以爲五公爲一代之盛桃李也。《庐陵王传》（《演繁露》一一）。
+26. 张柬之、桓彦范、敬晖、崔玄暐、袁恕己皆公所荐。公尝退食之后，谓五公曰：‘所恨衰老，身先朝露，不得见五公盛事，冀各保爱，愿尽本心。’五公心知目击，悬悟公意。公寝疾，五公候问，偶对终日，竟无一言。少顷，流涕及枕，但相视而已。五公退出，递不测其由。袁恕己曰：‘岂不气力转羸，须问家事乎？’张柬之曰：‘未有大贤废国谋家者也。’斯须，命张柬之、袁恕己、桓彦范三公入，余二公立于门外，曰：‘向者无言，盖以二公之故。此二公能断而不能密，若先与议之，事必外泄，一泄之后，则国异而家亡也。至其时或不与共之，事亦不就。梁王三思掌权，可先收而后行也。不然，则必反生大祸。’狄公没后，经岁余，五公潜会于幽闲之处，叙公当时之言，重结盟约。彻馔之后，相顾欲言，未至其时，恐负前诺，欲言又止，前后数四，桓彦范乃叙其言。言犹未毕，闻户牖之外，声若雷霆，须臾风雨，咫尺莫辨，所坐床褥悉掷于阶下。五公战惧，不知所据，乃相谓曰：‘此是狄公忠烈之至，假此灵变以惊众心，不欲吾辈先论此事，未至其时，不可复言也。’斯须，天清日明，不异于初。易之等既诛，袁谓张公曰：‘昔有遗言，使先收三思，岂可舍诸？’张公曰：‘但大事毕功，此是机上之物，岂有逃乎！’后梁王交通于内，王公果为所谮，具遭流窜。所期兴废年月，遗约轨模少无异也。《狄梁公传》（《通鉴考异》一一）。　案：《通鉴考异》曰：‘此盖作传者因五人建兴复之功，附会其事，云皆仁杰所举，受教于仁杰耳。其言谲怪无稽，今所不取。’
+27. 狄梁公既立中宗，荐张柬之、袁恕己、桓彦范、崔玄暐、敬晖，五公咸出门下，皆自州县拔居显名，外以为五公为一代之盛桃李也。《庐陵王传》（《演繁露》一一）。
 
-28. 狄仁杰之爲相也，有卢氏堂姨居于午桥南别墅。姨止有一子，而未尝来都城亲戚家。梁公每遇伏腊晦朔，修礼甚谨。尝经甚雪多休暇，因候卢姨安否，适见表弟挟弓矢携雉兔来归，膳味进于北堂。顾揖梁公，意甚轻简。公因啓姨曰：‘某今爲相，表弟有何乐从，愿悉力以从其旨。’姨曰：‘相自贵尔，有一子不欲令其事女主。’公大惭而退。《松窗杂録》。又《广记》二七一引。《唐语林》四。《古今合璧事类备要》前集三六引作《朝野佥载》，误。
-29. 则天时，南海郡献集翠裘，珍丽异常。张昌宗侍侧，则天因以赐之，遂命披裘，供奉双陆。宰相狄梁公仁杰时入奏事，则天令畀座，因命梁公与昌宗双陆，梁公拜恩就局。则天曰：‘卿二人赌何物？’梁公对曰：‘争先三筹，赌昌宗所衣毛裘。’则天谓曰：‘卿以何物爲对？’梁公指所衣紫絁袍曰：‘臣以此敌。’则天笑曰：‘卿未知此裘价逾千金，卿之所指，爲不等矣。’梁公起曰：‘臣此袍乃大臣朝见奏对之衣，昌宗所衣乃嬖倖宠遇之服，对臣之袍，臣犹怏怏。’则天业已处分，遂依其説。而昌宗心赧神沮，气势索莫，累局连北。梁公对御就褫其裘，拜恩而出。及至光范门，遂付家奴衣之，乃促马而去。《集异记》二。又《广记》四〇五引。
-30. 武后信重狄仁杰，羣臣莫及，常谓之国老而不名。仁杰好面折廷诤，太后每屈意从之。尝从太后游幸，遇风吹仁杰巾坠，而马惊不能止，太后命太子追执其鞚而繫之。仁杰屡以老病乞骸骨，太后不许。入见常止其拜，曰：‘每见公拜，朕亦身痛。’仁杰薨，太后泣曰：‘朝堂空矣。’《续世説》五。
-31. 唐狄仁杰倜傥不羁，尝授司农员外郎，每判事，多爲正员卿同异。仁杰不平之，乃判曰：‘员外郎有同侧室，正员卿位擅嫡妻，此难曲事女君，终是不蒙顔色。’正员颇亦慙悚。时王及善、豆卢钦望拜左右相，仁杰以才望时议归之，颇冀此命，每戏王、豆卢，略无屈色。王、豆卢俱善长行，既拜，谓时宰曰：‘某无材行，滥有此授。’狄谓曰：‘公二人并能长行，何谓无材行？’或曰左相事，云适已白右相，狄谓曰：‘不审唤爲右相，合呼爲有相。’王、豆卢问故，狄曰：‘公不闻：聪明儿不如有相子，公二人可谓有相子也。’二公强笑，意亦悒悒。《御史台记》（《广记》二五四）。
+28. 狄仁杰之为相也，有卢氏堂姨居于午桥南别墅。姨止有一子，而未尝来都城亲戚家。梁公每遇伏腊晦朔，修礼甚谨。尝经甚雪多休暇，因候卢姨安否，适见表弟挟弓矢携雉兔来归，膳味进于北堂。顾揖梁公，意甚轻简。公因启姨曰：‘某今为相，表弟有何乐从，愿悉力以从其旨。’姨曰：‘相自贵尔，有一子不欲令其事女主。’公大惭而退。《松窗杂录》。又《广记》二七一引。《唐语林》四。《古今合璧事类备要》前集三六引作《朝野佥载》，误。
+29. 则天时，南海郡献集翠裘，珍丽异常。张昌宗侍侧，则天因以赐之，遂命披裘，供奉双陆。宰相狄梁公仁杰时入奏事，则天令畀座，因命梁公与昌宗双陆，梁公拜恩就局。则天曰：‘卿二人赌何物？’梁公对曰：‘争先三筹，赌昌宗所衣毛裘。’则天谓曰：‘卿以何物为对？’梁公指所衣紫絁袍曰：‘臣以此敌。’则天笑曰：‘卿未知此裘价逾千金，卿之所指，为不等矣。’梁公起曰：‘臣此袍乃大臣朝见奏对之衣，昌宗所衣乃嬖幸宠遇之服，对臣之袍，臣犹怏怏。’则天业已处分，遂依其说。而昌宗心赧神沮，气势索莫，累局连北。梁公对御就褫其裘，拜恩而出。及至光范门，遂付家奴衣之，乃促马而去。《集异记》二。又《广记》四〇五引。
+30. 武后信重狄仁杰，群臣莫及，常谓之国老而不名。仁杰好面折廷诤，太后每屈意从之。尝从太后游幸，遇风吹仁杰巾坠，而马惊不能止，太后命太子追执其鞚而系之。仁杰屡以老病乞骸骨，太后不许。入见常止其拜，曰：‘每见公拜，朕亦身痛。’仁杰薨，太后泣曰：‘朝堂空矣。’《续世说》五。
+31. 唐狄仁杰倜傥不羁，尝授司农员外郎，每判事，多为正员卿同异。仁杰不平之，乃判曰：‘员外郎有同侧室，正员卿位擅嫡妻，此难曲事女君，终是不蒙颜色。’正员颇亦慙悚。时王及善、豆卢钦望拜左右相，仁杰以才望时议归之，颇冀此命，每戏王、豆卢，略无屈色。王、豆卢具善长行，既拜，谓时宰曰：‘某无材行，滥有此授。’狄谓曰：‘公二人并能长行，何谓无材行？’或曰左相事，云适已白右相，狄谓曰：‘不审唤为右相，合呼为有相。’王、豆卢问故，狄曰：‘公不闻：聪明儿不如有相子，公二人可谓有相子也。’二公强笑，意亦悒悒。《御史台记》（《广记》二五四）。
 32. 秋官侍郎狄仁杰嘲秋官侍郎卢献曰：‘足下配马乃作驴。’献曰：‘中劈明公，乃成二犬。’杰曰：‘狄字犬傍火也。’献曰：‘犬边有火，乃是煮熟狗。’《朝野佥载》六。
