--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,9 @@ title: "历史上的一些人"
 author: "林峰"
 date: "`r Sys.Date()`"
 output:
+  ## https://rstudio.github.io/tufte/
+  tufte::tufte_handout: default
+  tufte::tufte_html: default
   bookdown::pdf_book:
     keep_tex: yes
     dev: "cairo_pdf"
