More reading of `《宋人轶事汇编》`.

--- a/20-tang-02-official.Rmd
+++ b/20-tang-02-official.Rmd
@@ -106,7 +106,15 @@ knitr::include_graphics("images/唐中期-并州-汴州.jpg")
 
 11. 狄内史仁杰始为江南安抚使，以周赧王[^周赧王]、楚王项羽、吴王夫差、越王勾践、吴夫槩王、春申君、赵佗、马援、吴桓王等神庙七百余所，有害于人，悉除之。惟夏禹、吴太伯、季札、伍胥四庙存焉。《隋唐嘉话》下。《唐语林》三。
 
-12. 则天将不利王室，越王贞于汝南举兵，不克，士庶坐死者六百余人，没官人五千余口，司刑使相次而至，逼促行刑。时狄仁杰检校刺史，哀其诖误，止司刑使，停斩决，飞奏表曰：‘臣欲闻奏，似为逆人论理；知而不言，恐乖陛下存恤之意。奏成复毁，意不能定。此辈非其本心，愿矜其诖误。’表奏，特敕配流丰州。诸囚次于宁州，宁州耆老郊迎之，曰：‘我狄使君活汝耶！’相携哭于碑侧，斋三日而后行。诸囚至丰州，复立碑纪德。初，张光辅以宰相讨越王，既平之后，将士恃威，征敛无度，仁杰率皆不应。光辅怒曰：‘州将轻元帅耶？何征发之不赴？’仁杰〔曰〕：‘汝南勃乱，一越王（耶）〔耳〕。（仁杰曰）今一越王已死，而万越王生。’光辅质之，仁杰曰：‘明公亲董戎旃二十余万，所在劫夺，远迩流离，创钜之余，肝脑涂地。此非一越王死而万越王生耶？且脇从之徒，势不自固，所以先着纲理之也。自天兵暂临，其弃城归顺者不可胜计，绳坠四面成蹊，奈何纵求功之人，杀投降之士？但恐冤声腾沸，上彻于天，将请尚方（断）〔斩〕马剑斩足下，当北面请命，死犹生也。’遂为光辅所谮，左授复州刺史。寻征还魏州刺史，威惠大行，百姓为立生祠。迁内史，及薨，朝野凄恸。则天赠文昌左相，中宗朝赠司空，睿宗朝追封梁国公，哀荣备于三朝，代莫与为比。《大唐新语》四。　案：原文有误，据《旧唐书》本传改。
+[^李贞]: 李贞（627年－688年10月12日），陇西狄道（今甘肃省临洮县）人。唐朝宗室、大臣，唐太宗第八子，母为燕德妃。
+
+    擅长骑射，爱好文史。贞观年间，先后任安州、徐州、扬州、相州和绛州刺史，封为越王。唐高宗即位后，历任左卫大将军、绵、相、蔡州刺史。唐中宗李显即位后，授太子太傅。嗣圣元年（684年），迁太子少保、豫州刺史。
+
+    垂拱二年，李贞起兵反对武则天当政，兵败自尽，赐姓虺氏。开元五年（716年），重新陪葬于昭陵，追赠豫州刺史，谥号为敬。
+
+^[汝南]: 西汉高帝四年(前203)置，治所在上蔡县(今河南上蔡县西南)。辖境相当今河南颍河、淮河之间，京广铁路西侧一线以东，安徽茨河、西淝河以西、淮河以北地区。东汉徙治平舆县(今河南平舆县北)。三国魏徙治新息县(即今河南息县)。东晋移治悬瓠城(即今河南汝南县)。南朝宋泰始中为司州治。北魏皇兴中为豫州治。隋开皇初废。大业三年(607)改蔡州复置。唐武德初改为豫州。天宝元年(742)又改为汝南郡。乾元元年(758)改为豫州。
+
+12. 则天将不利王室，越王贞[^李贞]于汝南^[汝南]举兵，不克，士庶坐死者六百余人，没官人五千余口，司刑使相次而至，逼促行刑。时狄仁杰检校刺史，哀其诖误，止司刑使，停斩决，飞奏表曰：‘臣欲闻奏，似为逆人论理；知而不言，恐乖陛下存恤之意。奏成复毁，意不能定。此辈非其本心，愿矜其诖误。’表奏，特敕配流丰州。诸囚次于宁州，宁州耆老郊迎之，曰：‘我狄使君活汝耶！’相携哭于碑侧，斋三日而后行。诸囚至丰州，复立碑纪德。初，张光辅以宰相讨越王，既平之后，将士恃威，征敛无度，仁杰率皆不应。光辅怒曰：‘州将轻元帅耶？何征发之不赴？’仁杰〔曰〕：‘汝南勃乱，一越王（耶）〔耳〕。（仁杰曰）今一越王已死，而万越王生。’光辅质之，仁杰曰：‘明公亲董戎旃二十余万，所在劫夺，远迩流离，创钜之余，肝脑涂地。此非一越王死而万越王生耶？且脇从之徒，势不自固，所以先着纲理之也。自天兵暂临，其弃城归顺者不可胜计，绳坠四面成蹊，奈何纵求功之人，杀投降之士？但恐冤声腾沸，上彻于天，将请尚方（断）〔斩〕马剑斩足下，当北面请命，死犹生也。’遂为光辅所谮，左授复州刺史。寻征还魏州刺史，威惠大行，百姓为立生祠。迁内史，及薨，朝野凄恸。则天赠文昌左相，中宗朝赠司空，睿宗朝追封梁国公，哀荣备于三朝，代莫与为比。《大唐新语》四。　案：原文有误，据《旧唐书》本传改。
 
 13. 狄仁杰为内史，则天谓之曰：‘卿在汝南，甚有善政，欲知谮卿者乎？’仁杰谢曰：‘陛下以臣为过，臣当改之；陛下明言，臣之幸也。若臣不知谮者，并为友善，臣请不知。’则天深加叹异。《大唐新语》七。
 
